handoff/V01-50/V22/DMA_RULES.md
# 🛡️ DMA_RULES.md — TÚI KHÔN (D-series)

> **Cách dùng:** Đọc trước khi viết SQL/code. Mỗi luật = một bài học DMWS/DMA đã trả giá. Hệ số **D** (DMA tự nuôi tiếp); `(← G##)` là nguồn gốc DMWS để truy vết.
> **`[stack: X]`** = chỉ áp khi dùng công cụ X.
> **Stack DMA chính thức (tài liệu A §0):** Lovable (React+Vite+TS+Tailwind+shadcn, **routing = TanStack Start file-based + SSR**) → GitHub → Vercel · Supabase (DB/Auth/Edge Functions/RLS) · **Bunny** (storage/CDN/Stream) · GoDaddy (DNS) · Suno (tạo nhạc). Domain: dma.vercel.app → demenart.com.

---

## 🧭 PHẦN 0 — TÁM NGUYÊN TẮC META (nổ mỗi phiên)

1. **Audit thật trước khi làm.** DB sống + file code là nguồn sự thật; spec/handoff có thể sai. Không đoán.
2. **Verify bằng bằng chứng thật.** "Build OK"/"Lovable xong" ≠ xong. Chốt sau khi nhìn ảnh thật + SQL/Network. *(Trí nhớ cũng có thể sai — v3: "mig 010 đã đóng public execute" sai, verify mới bắt được hàm tạo sau dính anon.)*
3. **DB-first sequencing.** DB → RLS/Function → Edge → UI.
4. **Permission cộng thêm + CÓ SCOPE, không flip role.** Gate năng lực bằng permission gắn phạm vi (school/class), KHÔNG đổi `role` cơ bản. (← G473)
5. **Một sự thật lưu một nơi, đọc-xuyên-khoá.** KHÔNG sync engine/trigger 2 chiều. (← G305)
6. **Config-driven, không hardcode tham số.** Giá/giới hạn/chính sách sống trong bảng config. (← G393/G410)
7. **Registry-driven + self-documenting.** Menu/permission/tra-cứu đọc từ registry; thứ mới tạo phải tự khai báo metadata.
8. **Library & Tra Cứu update cùng nhịp.** Làm tới đâu ghi tới đó. *(Bài học V162.)*

> **⭐ Nguyên tắc LINH HỒN (đứng trên mọi luật):** Nhật ký nghệ thuật thuộc về TRẺ, không thuộc trường. License B2B chỉ là lớp gắn vào. Bảo toàn 2 thép chờ (D40, D41). KHÔNG chấm điểm/xếp hạng/so sánh trẻ. *(v3 chứng minh: parent thấy con-mình-không-thấy-trường; admin không thấy trẻ. v5 chứng minh thêm: parent ĐỌC trọn nhật ký con mình, admin thấy 0 journey/skills/badges.)*

---

## A. QUY TRÌNH

- **D1 — Audit DB *và* code THẬT (read-only) TRƯỚC khi viết SQL/code.** `information_schema`, `pg_get_functiondef`, `pg_policies`. KHÔNG đoán cột/enum/grant/signature/FK. (← G78/G277)
- **D2 — `auth.uid()` LUÔN NULL trong Supabase SQL Editor.** Logic auth-gated (RLS/SECURITY DEFINER/trigger guard) test qua **UI thật** với tài khoản thật. (← G95) **(v17 mở rộng — verify side-effect):** câu SELECT verify gọi hàm CÓ side-effect (INSERT audit/seed) thì **ĐỪNG đọc lại bảng đó trong CÙNG statement** (subquery đọc ở snapshot TRƯỚC khi statement chạy → thấy 0 sai lệch) **và ĐỪNG dùng window thời gian hẹp** (`now()-2min` lệch nếu chạy cách quãng). Đọc kết quả ở **statement SAU**. *(v17: `denied_audit_written=0` làm tưởng engine lỗi — thực ra vết đã ghi, câu verify sai vì cả hai bẫy này. Engine không sai; câu kiểm sai.)*
- **D3 — "Build OK" ≠ XONG.** Verify bằng ảnh thật luồng người dùng + SQL/Network. (← G114)
- **D4 — SQL chia khối nhỏ đánh số.** SQL Editor chỉ trả kết quả **statement cuối** → đặt SELECT verify cuối. (← G106)
- **D5 [stack: Lovable] — KHÔNG bấm "Try to fix all"/"Fix with AI"** (revert ngầm). FULL paste-over. Soát keyword sau dán. (← G318/G509/G537)
- **D6 [stack: Lovable] — Anchor find-replace phải khớp file SAU Prettier.** (← G510)
- **D7 [stack: Lovable] — Preview có thể CACHE.** Hard reload trước khi nghi code. (← G321)
- **D8 [stack: Lovable] — Lovable NUỐT `<` cuối dòng khi paste khối.** (← G322)
- **D9 [stack: Lovable] — Reconnect đẻ repo mới.** ⛔ ĐỪNG đổi tên repo/project đang nối Lovable. (← G333)
- **D10 [stack: Lovable] — Cài npm = gõ `"Add the npm dependency [package]"` trong chat.** (← G541)
- **D11 — Schema thuộc Claude/migrations, KHÔNG để Lovable auto-generate.** Lovable chỉ generate dựa schema có sẵn (đọc + sinh TS types). Dán "SCHEMA OWNERSHIP" vào đầu mọi prompt Lovable.
- **D12 — Lỗi giống nhau 2 lần cùng chỗ = deterministic.** Đọc log/error thật, đừng retry mù. (← G449)
- **D13 [stack: Lovable/TanStack] — Stack routing = TanStack Start (file-based `src/routes/` + SSR), KHÔNG phải Vite SPA + React Router.** KHÔNG cần `vercel.json`. **SSR loader chạy KHÔNG có JWT** → mọi fetch auth-gated phải **client-side sau hydrate**; bọc code browser-only bằng `typeof window !== 'undefined'`. (mở rộng D82)
- **D14 [stack: Lovable] — KHÔNG để Lovable auto-fix bảo mật.** "Try to fix all"/"Fix with AI" có thể **ghi RLS/migration vào DB** → phá D11. **Phân loại nhiễu scanner:** *"RLS enabled no policy"* + *"Signed-in users can execute SECURITY DEFINER"* = **EXPECTED, đúng thiết kế** (deny-by-default; authenticated execute helper cố ý) — đừng fix; *"Public can execute SECURITY DEFINER"* = **thật** → sửa bằng migration `revoke ... from public, anon`; *"Leaked Password Protection Disabled"* = **thật nhưng là TOGGLE** Supabase (Auth→Attack Protection), KHÔNG sửa bằng code; *"Function Search Path Mutable"* thường là `rls_auto_enable` của Supabase (benign). Issue "profiles lack write protection" khi chưa có policy ghi = deny-by-default, không phải lỗ hổng sống. *(v5: scanner còn 7–13 issue — vẫn nhiễu đúng thiết kế, KHÔNG fix.)*
- **D15 — RE-VERIFY "public/anon EXECUTE" sau MỌI migration tạo SECURITY DEFINER function.** Hàm mới luôn đẻ grant EXECUTE mặc định cho `public`/`anon` → harden 1 lần (mig 010) KHÔNG phủ hàm tạo sau. *(v3: 3 guard function ở mig 014/015 dính `anon` → mig 016 dọn. v4: `current_school_id` sạch. v5: 3 helper Sessions sạch ngay trong mig 018.)* Query verify: `aclexplode(proacl)` join `pg_roles` lọc `rolname in ('public','anon') AND privilege_type='EXECUTE' AND prosecdef`. Kỳ vọng `[]`. *(Lưu ý cú pháp: `aclexplode` trả cột `grantee` đã là oid — join `pg_roles.oid=a.grantee`, KHÔNG có `grantee_oid`. Và: nếu `proacl` NULL thì aclexplode rỗng → mặc định PUBLIC vẫn execute được → BẮT BUỘC chạy REVOKE/GRANT để proacl khác NULL thì verify mới có nghĩa.)*

---

## B. SQL / SUPABASE

- **D20 — SECURITY DEFINER chuẩn:** `SET search_path=''` + schema-qualified (`public.bảng`) + dollar-quote `$func$` + REVOKE→GRANT. (← G106/G164/G224) **⭐ (v17 — qualify cả hàm EXTENSION):** `search_path=''` thì **MỌI** hàm phải schema-qualify, kể cả hàm trong extension — `extensions.gen_random_bytes()`, `extensions.digest()`, `extensions.crypt()`… (pgcrypto sống ở schema `extensions`, KHÔNG `public`). **Bẫy SQL Editor che lỗi:** Editor chạy với search_path mặc định (gồm `extensions`) → `gen_random_bytes(...)` thấy được → verify `ok`; nhưng khi **RPC secdef chạy** với `search_path=''` → **`42883 function gen_random_bytes does not exist`** → `.rpc` throw → UI rơi nhánh else. *(v17: `create_private_share_link` verify `gen_bytes_works=ok` ở Editor nhưng vỡ khi PH gọi thật → fix qualify `extensions.gen_random_bytes`. Một bằng chứng nữa cho D2/D3: SQL-pass ≠ live-pass.)*
- **D21 — Sau `CREATE OR REPLACE FUNCTION`: `REVOKE ALL … FROM public, anon` → `GRANT EXECUTE … TO authenticated`.** (← G164/G224) *(Bổ sung D15: re-verify sau đó.)*
- **D22 — Đổi signature RPC = DROP + recreate + REVOKE/GRANT** (KHÔNG `CREATE OR REPLACE`). (← G287)
- **D23 — RLS deny-by-default (CỐT LÕI DMA):** mọi bảng bật RLS; không policy = không ai đọc. INSERT `WITH CHECK`; UPDATE cần CẢ `USING`+`WITH CHECK`; SELECT/DELETE chỉ `USING`. Helper chuẩn: `current_profile()`, `current_profile_role()`, `is_admin()`, `same_school(school_id)`, `is_child_parent(child_id)`, `is_distribution_lead(cd_id)`, `is_session_teacher(session_id)`. *(Project bật "automatic RLS" → event-trigger `rls_auto_enable` benign.)* **Helper DMA tự thêm (v3):** `class_school_id(class_id)` (map class→school, bypass RLS tránh đệ quy), `child_in_my_school(child_id)` (trẻ ghi danh ở trường mình), `is_school_admin()` (**non-definer** — chỉ so enum master/sub). **(v4):** `current_school_id()` (secdef — school_id của caller; NULL nếu admin nền tảng/PH; dùng phân biệt "thành viên trường"). **(v5 — cụm Sessions):** `cd_school_id(cd_id)` (class_distribution→class→school), `session_school_id(session_id)` (session→cd→class→school), `is_session_lead(session_id)` (caller là lead của distribution của tiết). **(v8 — cụm Moments):** `moment_school_id(moment_id)` (moment→class→school), `is_moment_parent(moment_id)` (caller là PH của ≥1 trẻ được tag), `moment_is_approved(moment_id)` (moment ở state='approved'). Tất cả secdef, bypass RLS tránh đệ quy, đã re-verify D15.
- **D24 — Supabase trả `numeric` dưới dạng STRING** → bọc `Number()`. (← G514)
- **D25 — `jsonb_build_object` cần số tham số CHẴN.** (← G529)
- **D26 — Trigger function (SECURITY DEFINER) KHÔNG cần GRANT EXECUTE** (chạy quyền owner; fire dù đã revoke). Bọc logic phụ trong `BEGIN…EXCEPTION WHEN OTHERS THEN NULL`. (← G589) *(Vẫn nên revoke public/anon cho sạch scanner — D15.)*
- **D27 — Triggers nền DMA:** `set_updated_at` · `enforce_max_two_parents` · `lesson_version_autoincrement` (immutable) · helper MIN-consent multi-child.
- **D28 — ⭐ RLS KHÔNG khóa được CỘT → ghim cột nhạy cảm bằng TRIGGER GUARD.** Mặt leo thang (`role`/`permissions`/`school_id`/`user_id` của profiles; `master_profile_id`/`name`/`code`/`state` của schools; `global_child_id`/`identity_user_id`/`merged_into`/`state` của children) → `BEFORE UPDATE` trigger SECURITY DEFINER: `if public.is_admin() then return new; else new.col := old.col; ... end if`. RLS chỉ gác ROW (ai sửa được dòng nào); guard gác CỘT (sửa được cột nào). *(v3 nghiệm thu: parent/master/teacher bấm "tự nâng super_admin" → guard ghim → vai trò giữ nguyên.)*
- **D29 — ⭐ RETURNING bị lọc bằng SELECT policy → INSERT có thể "câm".** Nếu người tạo chưa thỏa SELECT policy của row vừa insert (vd `children` chưa có enrollment → `children_select_school` fail), client KHÔNG lấy được id/row trả về. Giải: tạo qua **RPC SECURITY DEFINER** làm nguyên tử (vd `create_child_and_enroll`: insert child + insert enrollment + `return id`), KHÔNG raw INSERT từ client. RPC tự kiểm quyền (`is_admin()` OR school-admin đúng trường) trước khi ghi.
- **D30 — ⭐ Seed/migration cần bypass guard trigger: `SET session_replication_role = replica;` … `SET session_replication_role = origin;`.** Vì SQL Editor không có `auth.uid()` → `is_admin()`=false → guard (D28) ghim cột → KHÔNG seed được `role`/`school_id`. `replica` tắt user trigger tạm thời. (Nếu thiếu quyền → `ALTER TABLE … DISABLE TRIGGER`.) Nhớ bật lại `origin` cuối khối. *(Lưu ý: chỉ cần khi cụm CÓ guard trigger. Cụm Sessions/Journey KHÔNG có guard → seed_003/004 không cần replica.)*
- **D73 — ⭐ RPC ĐỌC CURATED cho PH (`get_child_journal`, mig 028, secdef).** PH đọc được "bộ xương" `child_journey`/`child_skills`/`child_badges` (D54) **nhưng KHÔNG resolve được** `program_id`/`ref_id` thành nhãn — vì `programs` (D52) và `lesson_sessions` (D53) là **school-scoped**, mà PH có `school_id` NULL (đúng "thấy con không thấy trường" D40). → secdef RPC **bắc cầu có kiểm soát**: gate `is_child_parent(child) OR child_in_my_school(child)` (gương SELECT policy D54) rồi JOIN sang `programs`/`lesson_sessions`/`badges` (**bypass RLS CỐ Ý** — đây là lý do hàm tồn tại) → trả **CHỈ nhãn an toàn** (`program_name` + `session_title` + badge `title`/`description`), **KHÔNG lộ nội dung giáo trình** (`content_override`/`lesson_version`). Lọc `child_badges.status='confirmed'` (D46 — chỉ huy hiệu đã xác nhận). Trả jsonb `{journey[], skills[], badges[]}` cho UI render. **Phân biệt với D72:** D72 (system-writer) REVOKE cả `authenticated` chỉ `service_role`; **D73 grant `authenticated`** (read-only, PH gọi trực tiếp). **Phân biệt với helper RLS:** helper trả boolean/id phục vụ policy; D73 trả **payload curated cho UI**, vượt ranh giới RLS có chủ đích để hiện nhãn. **Pattern rộng:** khi một vai cần đọc dữ liệu mà NHÃN của nó nằm ở bảng vai đó không có quyền đọc → **RPC secdef curated trả nhãn an toàn, KHÔNG nới RLS bảng gốc.** Gate dùng `auth.uid()` qua helper → **test gate cần login thật** (D2); nhưng inner-join nhãn test thẳng SQL Editor được. *(v10 ĐẠT — verify D15 grant `[]`; nhãn resolve đúng "Cảm Thụ Âm Nhạc Dế Mèn" + "Buổi 1 — Làm quen âm thanh" + huy hiệu "Lần đầu giữ nhịp" confirmed; nghiệm thu login thật PH Bé Jenny `/portal/journal` hiện trọn timeline + kỹ năng + huy hiệu, không điểm số/xếp hạng.)*
- **D72 — ⭐ RPC VẬN HÀNH = "system-only writer" (mig 027, test SQL Editor).** Bảng cố tình KHÔNG có INSERT policy (`notifications`/`audit_logs` — D57) → ghi qua **secdef RPC**, KHÔNG raw insert từ client. **⚠️ Khác MỌI helper secdef trước (vốn grant `authenticated`): hai hàm này REVOKE cả `authenticated`, CHỈ `grant execute to service_role`** — vì nếu authenticated gọi được thì client **spam noti cho người khác** / **forge `audit_logs`** → phá đúng D57 (anti-spam + append-only). Hàm nội bộ (trigger/RPC khác cùng owner) vẫn gọi được không cần grant. **(1) `create_notification(slug, profile_id, payload)`:** validate slug tồn tại + `enabled` (off-switch D59 → `enabled=false` trả NULL no-op); **KHÔNG render `body_template`** (client tra catalog + ghép `{key}`↔payload lúc hiển thị — một-sự-thật-một-nơi). **(2) `write_audit_log(action, fields jsonb)`:** `fields` gom mọi cột optional (linh hoạt; `nullif(...,'')::uuid` cho key thiếu); append-only. *(v9 ĐẠT — verify grantee = `postgres`+`service_role` only, KHÔNG public/anon/authenticated; create với slug sai → raise; ghi noti+audit thật rồi dọn theo nhãn `_test`.)*

---

## C. KIẾN TRÚC / LINH HỒN (ranh giới cứng DMA)

- **D40 — ⭐ THÉP CHỜ #1: Nhật ký treo vào ĐỨA TRẺ.** `child_journey` gắn `child_id` gốc + cột `source` (V1='demen'). `programs` = danh mục TOÀN CỤC. KHÔNG thiết kế nhật ký thuộc trường. *(v3: `children` KHÔNG có `school_id` — scope trẻ đi vòng enrollments→classes; parent thấy con mà không thấy trường. v5: parent ĐỌC trọn `child_journey/child_skills/child_badges` của con; admin thấy 0.)*
- **D41 — ⭐ THÉP CHỜ #2: `children` không khóa cứng khỏi danh tính tương lai.** Cột `identity_user_id` nullable để ngỏ Kid V2. Guard children ghim cột này khỏi non-admin (D28).
- **D42 — License-gate TÁCH khỏi journey-ownership.** Trường hết license → khóa thao tác, nhưng trẻ/PH vẫn xem hành trình. Đừng gắn cứng journey vào license/contract.
- **D43 — Versioning giáo trình BẤT BIẾN.** KHÔNG ghi đè lesson; tạo `lesson_versions` mới (version_no++ ở INSERT). Trường/lớp tự chọn version. *(v4: `lesson_versions` KHÔNG có UPDATE policy → bất biến cả ở tầng RLS.)*
- **D44 — Giáo án = GỐC bất biến (DM) + OVERRIDE per lớp/GV** (`content_override`+`session_media`), KHÔNG sửa bản gốc. *(v5: `lesson_sessions.content_override` jsonb — GV sửa instance, giữ lesson_version bất biến.)*
- **D45 — Scope quyền theo trường + môn-trong-lớp + tiết:** thành viên trường THẤY mọi buổi toàn trường, chỉ THAO TÁC môn-lớp mình lead (`class_distributions.lead_teacher_id`) / tiết mình assistant (`session_teachers`). Lead finalize report; Assistant điểm danh/đánh giá sau `prep_ready`. *(v5 nghiệm thu — xem D53.)*
- **D46 — Sao/badge KHỬ CẠNH TRANH.** Sao = ghi nhận RIÊNG; KHÔNG leaderboard/đua/shop. Badge rule gợi ý → GV/School xác nhận mới hiện. *(v5: `child_badges` PH chỉ ĐỌC, KHÔNG tự trao — WRITE = trường. `child_skills` chỉ signal_count, không xếp hạng.)*
- **D47 — Consent 2 tầng:** Trường set KHUNG → PH chọn TRONG khung. Hiệu lực = **min(trường, PH)**. Multi-child → MIN consent. Rút consent theo từng loại. *(Cụm Privacy CHƯA làm RLS.)*
- **D48 — ⭐ Admin Dế Mèn mặc định KHÔNG xem PII trẻ.** Moat = data ẩn danh/tổng hợp. Policy `children`/`enrollments`/`child_parents`/`child_transfers` (v3) + `child_observations`/`session_reports` (v5) + `child_journey`/`child_skills`/`child_badges` (v5) KHÔNG mở cho `is_admin()`. Xem định danh → `request_sensitive_access` (reason+purpose+scope) ghi audit TRƯỚC khi trả. *(v3: super_admin thấy 0 trẻ. v5: super_admin thấy 0 ở observations/reports/journey/skills/badges.)*
- **D49 — ⭐ Lớp = HOMEROOM đa môn (Cách Y).** `classes` KHÔNG gắn 1 môn. Môn rót qua `class_distributions` (mỗi môn 1 dòng, `lead_teacher_id` riêng). `enrollments` = trẻ × homeroom; mã HS + trạng thái học ở `enrollments`.
- **D50 — ⭐ Phân phối mẫu = cây roadmap→piece→tiết; GV chỉnh INSTANCE.** Rót mẫu vào homeroom → bung `lesson_sessions`. GV sửa instance, KHÔNG đụng mẫu gốc.
- **D51 — ⭐ License tách bạch (môn + seat).** `Tổng = (số môn × giá) + (số tk GV × giá) + storage`. Môn ⟂ seat (subject-agnostic). Master bundled (không seat). Gate dạy = seat active AND entitlement môn active; tách journey (D42). V1: `has_active_seat` = trường có subscription active + seat_count>0.
- **D52 — ⭐ RLS cụm CURRICULUM (mig 017, nghiệm thu login thật v4).** Kho giáo trình 8 bảng catalog (`programs`/`age_groups`/`levels`/`themes`/`lessons`/`lesson_versions`/`program_distributions`/`program_distribution_items`) = **TOÀN CỤC**: **READ** = `is_admin() OR public.current_school_id() IS NOT NULL` (admin + thành viên trường; **PH bị loại vì `school_id` NULL** — convention *load-bearing*, đừng để PH có school_id); **WRITE** = `is_admin()` only. **`lesson_versions` KHÔNG có UPDATE policy** → bất biến ở tầng RLS (gấp đôi trigger D43). **`ideas` KHÁC catalog** (có `school_id`+`proposer`) → scoped: READ = admin OR trường mình OR người đề xuất; INSERT = thành viên trường đúng school+đúng proposer; UPDATE = admin triage. **Nguyên tắc rộng:** RLS không gác CỘT → giấu nội dung premium khỏi 1 vai → tách quyền đọc ở tầng BẢNG. *(v4 ĐẠT: parent 0 program; teacher/master ghi `programs` → DB chặn.)*
- **D53 — ⭐ RLS cụm SESSIONS (mig 018, nghiệm thu login thật v5).** 5 bảng xoay quanh buổi học (`lesson_sessions`/`session_teachers`/`session_media`/`session_reports`/`child_observations`). Scope **KHÔNG phẳng** (khác Curriculum): **READ** = `same_school(session_school_id)` → thành viên trường thấy mọi buổi toàn trường; **admin + PH bị loại tự động** (school NULL → `same_school` false; D48 cho observations/reports chứa id trẻ). **WRITE theo vai trò người-trong-phòng:** `lesson_sessions`/`session_teachers` = lead (`is_distribution_lead`) HOẶC school-admin cùng trường; `session_media`/`child_observations` = lead HOẶC assistant (`is_session_teacher`); `session_reports` = lead HOẶC school-admin cùng trường (**school-admin step-in = moat chống GV nghỉ việc**). DELETE chưa làm (soft-delete qua `session_state`). 3 helper định tuyến mới: `cd_school_id`/`session_school_id`/`is_session_lead`. *(v5 ĐẠT: master ĐỌC observation nhưng GHI bị chặn "violates RLS policy for child_observations" → "thấy mà không thao tác" D45; super_admin 0 ở observations/reports D48; teacher-lead ghi observation THÀNH CÔNG.)*
- **D54 — ⭐ RLS cụm JOURNEY (mig 019, nghiệm thu login thật v5).** TRÁI TIM DMA. **Hai nhóm tách bạch:** (A) **gắn trẻ/PII** — `child_journey`/`child_skills`/`child_badges`: READ = `is_child_parent(child_id) OR child_in_my_school(child_id)` (PH của trẻ HOẶC thành viên trường; **admin bị loại — D48**); WRITE = `child_in_my_school(child_id)` (V1 nguồn 'demen' từ trường; **PH chưa ghi V1, PH-thêm = V2 với `source≠demen`**). (B) **catalog toàn cục** — `badges`/`home_activities` (không child_id/school_id): READ = mọi vai đăng nhập (gồm PH — nhãn/gợi ý công khai, không IP); WRITE = `is_admin()`. **D46 ghim vào RLS:** `child_badges` PH chỉ ĐỌC, KHÔNG tự trao. *(v5 ĐẠT — 3 phép thử linh hồn: parent ĐỌC trọn nhật ký con mình [2 entry+kỹ năng+huy hiệu]; super_admin thấy 0 journey/skills/badges nhưng đọc được catalog; parent bấm thêm entry → DB chặn "violates RLS policy for child_journey".)*
- **D55 — ⭐ RLS cụm PRIVACY/CONSENT (mig 020, nghiệm thu login thật v6).** 3 bảng quản trị: `consents` · `privacy_requests` · `share_links`. **Sự thật cốt lõi:** engine 2 tầng `min(trường, PH)` + MIN-multi-child = **Edge Function `get_signed_media_url` (D47), KHÔNG ở RLS**; RLS cụm này chỉ gác **quyền-truy-cập-DÒNG**. KHUNG trường = **các cột trên `schools`** (`sharing_mode`/`watermark_mode`/`moment_approval_mode`/`report_approval_mode`/`parent_comment_mode`), KHÔNG bảng riêng; `consents` thuần tầng PH (`parent_profile_id`, không `school_id`). **(1) `consents`:** READ = `is_child_parent OR child_in_my_school` (PH + thành viên trường; **admin loại — D48**); WRITE (**Fork 1A**) = **chỉ PH**, ghim `parent_profile_id = current_profile()` (trường ghi-hộ = RPC có audit, sau). **(2) `privacy_requests` (hồ sơ tuân thủ):** READ (**Fork 2A — carve-out CỐ Ý khỏi D48**) = `is_admin() OR requester=self OR (is_school_admin() AND same_school(school_id))` — Dế Mèn là controller BẮT BUỘC xử lý yêu cầu xóa/truy cập, không phải soi PII; INSERT = requester=self (+ ràng buộc child/school); UPDATE triage = admin OR school-admin cùng trường. **(3) `share_links` (Fork 3A):** creator-only mọi chiều; resolve-by-token = Edge public bypass RLS. KHÔNG helper mới, KHÔNG DELETE (soft qua `withdrawn_at`/`revoked_at`/`status`). *(v6 ĐẠT — 2 bằng chứng vàng: **teacher privacy_requests=0 vs master=1** → nhánh `is_school_admin()` đứng; **admin consents=0 nhưng privacy_requests=1** → carve-out 2A đúng. parent ghi consent THÀNH CÔNG; master/teacher ghi → DB chặn "violates RLS policy for consents".)*
- **D57 — ⭐ RLS cụm OPS/CONFIG (mig 022–023, nghiệm thu login thật v8).** 5 bảng: `notifications`·`support_requests`·`audit_logs`·`notification_types`·`app_settings`. **KHÔNG helper mới** (tái dùng `current_profile`/`is_admin`). **(1) `notifications`** = hộp thư cá nhân: READ/UPDATE = `profile_id=current_profile()` (UPDATE có cả USING+CHECK chống đổi chủ); **KHÔNG INSERT/DELETE policy** → noti do hệ thống sinh (RPC secdef/Edge service_role), client không tự đẩy noti cho người khác (chống spam). **(2) `support_requests`:** READ = `requester=self OR is_admin()`; INSERT = `requester=self` (RETURNING qua được, không cần RPC — D29 ổn vì self thỏa SELECT); UPDATE = admin (triage); KHÔNG DELETE (lifecycle `request_state`). **(3) `audit_logs` (carve-out CỐ Ý khỏi D48, như privacy_requests Fork 2A):** READ = `is_admin()` only (Dế Mèn = controller bắt buộc đọc vết); **KHÔNG INSERT/UPDATE/DELETE policy** → append-only + bất biến, chỉ Edge/service_role ghi (client KHÔNG forge). **(4) `notification_types`** (catalog, như badges D54): READ = mọi vai đăng nhập (`auth.uid() IS NOT NULL` — cần để render noti); WRITE admin; off bằng `enabled=false`. **(5) `app_settings`** (key-value): READ = `is_public OR is_admin()` (**anon đọc được footer/social công khai** cho site/SSR); WRITE admin. *(v8 ĐẠT — 4 bằng chứng vàng: audit non-admin=0/admin=2; support tách người gửi master-0/self-1/admin-2; cổng is_public internal-flag chỉ admin (12 vs 11); **forge audit chặn KỂ CẢ admin** → append-only.)*
- **D58 — ⭐ RLS cụm MOMENTS (mig 024–025, nghiệm thu login thật v8 — cụm #8, đóng 8/8).** 3 bảng: `learning_moments`·`moment_children`·`albums`. **Admin Dế Mèn LOẠI khỏi cả cụm (D48 — moment=ảnh trẻ). PH KHÔNG tạo content V1 (D64) → WRITE = nhân sự trường** (`same_school(class_school_id(class_id))`); school-admin step-in qua same_school (moat GV nghỉ). **⭐ Gate `approved` HAI TẦNG (bài học login thật):** `learning_moments` SELECT = nhân-sự-trường(mọi state) OR (`is_moment_parent(id)` AND `state='approved'`) — PH chỉ thấy moment ĐÃ DUYỆT; **NHƯNG** `moment_children` tag-table cũng phải gate `approved` (nếu chỉ gate ở learning_moments, PH đếm được tag của bản draft → suy ra tồn tại bản nháp con mình) → READ = `same_school(moment_school_id)` OR (`is_child_parent(child_id)` AND `moment_is_approved(moment_id)`). `albums` 2 nhánh (child_id/class_id nullable): READ child→(PH OR trẻ-trong-trường), class→nhân sự trường. **3 helper secdef mới** `moment_school_id`/`is_moment_parent`/`moment_is_approved` (chống đệ quy learning_moments↔moment_children, re-verify D15). KHÔNG DELETE (soft qua state). **Media (`media_assets`/`media_variants`) GIỮ deny-by-default = Edge-only** (D69/Tài liệu G) — KHÔNG phải lỗ hổng, là tư thế bảo mật đúng tới Phase 4 Edge. *(v8 ĐẠT — 3 bằng chứng vàng: admin 0/0/0; parent thấy 1 moment+1 tag vs trường 2+2 (gate approved 2 tầng); parent/admin tạo moment → DB chặn, teacher/master ghi được. Lỗi tag=2 do login thật bắt → vá mig 025.)*
- **D59 — ⭐ MÓNG CONFIG-DRIVEN dựng sớm (mig 022, gợi ý Jean từ FE DMWS).** Thứ "xuyên-suốt" (feature nào cũng đụng) phải có móng từ đầu, KHÔNG bolt-on phase-162. Hai móng đã dựng: **`notification_types`** (registry template: slug+title+body_template+audience+icon+**sound**+**position**+enabled — feature mới cần báo chỉ gọi `slug`+payload, hệ tra sound/icon/vị trí; `notifications.type` = FK NOT NULL vào đây) + **`app_settings`** (key-value: footer/contact/social/PWA/i18n, có `is_public` gate). **Bộ lọc kiến trúc:** dựng móng sớm CHỈ cho phụ-thuộc-xuyên-suốt; thứ **tự-đóng-kín** (popup/check-in/payment B2C) làm khi cần vì thêm sau KHÔNG tạo nợ. notification_types cắt bớt D100 (chỉ `description`) vì là catalog dữ liệu, không phải module Tra Cứu. *(KHÔNG bê từ DMWS: popup_types, B2C payment, check-in GPS, hệ i18n đầy đủ — chỉ 1 key i18n.default_locale.)*
- **D56 — ⭐ RLS cụm BUSINESS/LICENSE (mig 021, nghiệm thu login thật v7).** 3 bảng B2B: `pricing_config` · `school_subscriptions` · `school_subject_entitlements`. **KHÔNG chạm PII trẻ → D48 không áp. KHÔNG helper mới** (tái dùng `is_admin`/`same_school`/`is_school_admin`/`current_school_id`). **Sự thật cốt lõi — tách quyền đọc ở TẦNG BẢNG để che cột tài chính (kỹ thuật D52):** cột tiền (`total_amount`/`payment_status`/`contract_file_media_id`) sống trọn trong `school_subscriptions` → **READ = `is_admin() OR (is_school_admin() AND same_school(school_id))`** = chỉ chủ trường thấy hợp đồng + số tiền; còn "môn nào active" ở `school_subject_entitlements` (KHÔNG cột tiền) → **READ = `is_admin() OR same_school(school_id)`** = mọi GV trong trường thấy. `pricing_config` (price list TOÀN CỤC của Dế Mèn) → **READ = `is_admin() OR current_school_id() IS NOT NULL`** (member-read, **PH loại** — convention load-bearing như D52). **WRITE = `is_admin()` only cả 3 bảng** → trường KHÔNG tự cấp seat / kích hoạt môn / đổi giá; license là lớp Dế Mèn gắn vào (D51, D42 journey tách license). **KHÔNG DELETE** (lifecycle qua enum `subscription_state`: trial/active/past_due/expired/cancelled). *(v7 ĐẠT — 3 bằng chứng vàng: **teacher subscriptions=0 vs master=1** → nhánh tài chính `is_school_admin()` che số tiền khỏi GV; **parent 0 cả 3 bảng** (no school_id) → PH ngoài cuộc B2B; **master bấm thêm subscription → DB chặn** "violates RLS policy for school_subscriptions" → D51 trường-không-tự-cấp-license sống.)*

---

## D. ⭐ MEDIA / BUNNY SECURITY (nguồn sự thật = Tài liệu G — DMA chặt hơn DMWS)

> **Nguyên tắc nền:** Bunny chỉ LƯU + DELIVER. **Supabase Auth/RLS/Edge Function quyết định AI xem gì, bao lâu, có tải/chia sẻ không.**

- **D60 — Bunny zone tách theo trục TOKEN TẮT/BẬT** (Token Auth là công tắc cả-zone). Public (brand/marketing, token tắt) vs private (media trẻ/học liệu, token BẬT). Video dài → Bunny Stream (signed playback). **Topology 3-zone cụ thể + secret-per-zone: D74.**
- **D61 — Private media KHÔNG BAO GIỜ có URL công khai/vĩnh viễn.** Mọi lượt xem qua Edge `get_signed_media_url` → kiểm quyền/consent → ký URL Bunny hết hạn ngắn (ảnh/video 5–15', download 3–10').
- **D62 — DB chỉ lưu `path/zone/provider/video_id/metadata`.** KHÔNG lưu permanent URL · token · signed URL · API key.
- **D63 — Secret CHỈ server-side (Edge Function secrets):** `SERVICE_ROLE_KEY`, `BUNNY_*`. Client `VITE_*` CHỈ `SUPABASE_URL` + `ANON_KEY`. **⭐ (v17 — TÊN service-key built-in):** trong Edge, service role key đọc qua tên **`SUPABASE_SERVICE_ROLE_KEY`** (default secret Supabase **tự inject** mọi project, cùng `SUPABASE_URL`/`SUPABASE_ANON_KEY`) — **KHÔNG** đặt tên tự chế `SERVICE_ROLE_KEY` (không tồn tại → `Deno.env.get()` trả `undefined` → `createClient` throw **`Error: supabaseKey is required`** ngay dòng tạo client, trước cả khi chạm DB). `BUNNY_*` mới là **custom secret** cần set tay. **Cách khỏi đoán:** copy y hệt tên `Deno.env.get("...")` từ Edge đang chạy tốt (`get_signed_media_url`/`upload_media`). *(v17: Edge `resolve_share_link` đỏ với `supabaseKey is required` → thủ phạm tên env lệch, sửa `SERVICE_ROLE_KEY`→`SUPABASE_SERVICE_ROLE_KEY` là xong.)*
- **D64 — Upload private qua Edge `upload_media`** → ghi `media_assets` → audit. Parent KHÔNG upload moment V1.
- **D65 — Học liệu CTAN = stream-only/view-only V1.** KHÔNG download. Watermark ĐỘNG di chuyển khi `watermark_required`.
- **D66 — Private share link KHÔNG map thẳng Bunny URL.** Token nội bộ DMA (`share_links`) + expiry + scope.
- **D67 — Mọi thao tác media nhạy cảm GHI AUDIT.**
- **D68 — Trung thực về giới hạn:** V1 KHÔNG ngăn tuyệt đối quay màn hình. UI KHÔNG tuyên bố chống quay 100%. DRM = V2/V3.
- **D69 — Migration delta:** field `media_assets` Bunny-aware đã chuẩn bị (mig 005) nhưng CHƯA serving. Phase 4 bật Edge media. *(Cụm Media RLS thuần sẽ mỏng — phần thịt là Edge; làm chung với Edge.)*
- **D70 — ⏳ HOÃN có theo dõi: License enforcement device/GPS/Wifi (anti-fraud thuê bao).** Gắn allow-list thiết bị/vị trí vào license user để chống gian lận khi nhiều trường trả tiền thật (gợi ý Jean). **Quyết: HOÃN tới Phase Edge/Auth (4+), KHÔNG nợ móng** — vì (a) là tầng ENFORCEMENT bolt vào auth (Edge/middleware lúc login), không phải data xuyên-suốt; (b) **substrate GHI đã có sẵn:** `audit_logs.{device,ip,user_agent,metadata}` (mig 007) → bật sau chỉ thêm `user_devices`/`login_events` (additive) + allow-list nhét `schools.settings jsonb` (đã có) + 1 Edge gác cổng, KHÔNG đập gì; (c) PWA browser không đọc Wifi SSID tin cậy, GPS cần permission, fingerprint không ổn định; (d) đụng PDPD (thu GPS/thiết bị + xử lý dữ liệu trẻ vị thành niên) → cần consent/policy riêng; (e) V1=pilot, chống gian lận là bài toán scale.
- **D71 — ⭐ CONSENT ENGINE `media_consent_check` (mig 026 — D47/D55 làm CỤ THỂ; secdef, KHÔNG ở RLS).** "Người soát vé" quyết định media trẻ được xem/tải/chia sẻ không. Nhận `(moment_id, viewer_profile, action∈{view,download,share})` → trả `{allowed, reason, required_consent_type, school_sharing_mode, moment_state, blocking_children[]}`. **Luật MIN-multi-child:** một trẻ tag thiếu consent ⇒ chặn CẢ moment + liệt kê `blocking_children` (UI báo "vì bé X chưa đồng ý"). **Nhân sự cùng trường BỎ QUA consent** (người trong cuộc; `profiles.school_id = moment_school_id`) — vẫn audit/watermark ở Edge; consent chỉ gác PH/ngoài. **Nhánh PH:** moment phải `approved` + PH của ≥1 trẻ tag; `required_consent_type` theo action — view: 1 trẻ→`display_in_app`, ≥2 trẻ→`group_moment_in_class`; download→`download` + **cổng khung trường** `sharing_mode≥download_only`; share→`private_share_link` + `sharing_mode=private_share_link`. Hiệu lực = **min(trường, PH)** (trường `no_external_sharing` chặn dù PH đồng ý). Consent OK = có dòng `granted=true AND withdrawn_at IS NULL`. **Cờ tầng media-asset** (`download_allowed`/`watermark_required`/`stream_only`) Edge kiểm **per-asset**, KHÔNG trong engine. Curriculum/contract/report KHÔNG dính consent (gate entitlement/role). Grant `authenticated` (verdict read-only — UI pre-check OK). **⭐ Lợi thế: nhận tham số tường minh → TEST THẲNG trong SQL Editor không cần login thật (khác cụm RLS — D2).** *(v9 ĐẠT — 6 verdict: staff bypass · PH-approved ok · download/share bị khung-trường chặn · draft → moment_not_approved · negative test cổng-trường-mở → consent_missing nêu đúng child_id.)* **(v14 ĐẠT MIN-multi-child LIVE — phép thử linh hồn ở giao diện thật):** seed_009 thêm Bé Jimmy + moment NHÓM (approved) tag Jenny&Jimmy + Jimmy CỐ Ý thiếu `group_moment_in_class`. Engine SQL: child=2 → required `group_moment_in_class`; Jimmy thiếu → `blocking_children=[Jimmy]` dù **Jenny đã đồng ý** → chặn CẢ ảnh nhóm (đúng luật MIN); staff bypass. **LIVE:** PH `parent.demo` `/portal/journal` thấy card "Jenny & Jimmy biểu diễn nhóm" nhưng ảnh = **"Đang chờ ba mẹ đồng ý cho xem ảnh này"** (vì Jimmy); cấp consent `group_moment_in_class` cho Jimmy → engine `ok` blocking `[]` → PH reload → **ảnh nhóm hiện thật**. Vòng chặn-vì-Jimmy → cấp-Jimmy → mở khép kín ở giao diện. *(1 PH `parent.demo` link cả Jenny+Jimmy → journal có toggle 2 con — chứng PH nhiều con.)*
- **D74 — ⭐ TOPOLOGY 3 ZONE BUNNY (chốt v11 — làm cụ thể D60).** Phân trục theo **token TẮT/BẬT**, KHÔNG theo "assets vs learning": **`dma`** (token TẮT — brand/marketing; chỉ host) · **`dma-learning`** (token BẬT — học liệu CTAN, IP/moat; secret `BUNNY_LEARNING_HOST`+`BUNNY_LEARNING_TOKEN_KEY`) · **`dma-private`** (token BẬT — ảnh/video trẻ + hợp đồng + báo cáo + support; secret `BUNNY_PRIVATE_HOST`+`BUNNY_PRIVATE_TOKEN_KEY`). Hai zone private cùng "token bật" nhưng **luật gác KHÁC:** học liệu = entitlement (D75), ảnh trẻ = consent (D71) — Edge phân biệt per-asset qua `access_level`/`stream_only`/`download_allowed`. **Storage tách biệt** (file riêng tư chỉ nằm trong storage riêng tư → không lọt qua đường không-token). **Secret THEO-TỪNG-ZONE** (1 key lộ chỉ ảnh hưởng 1 zone) — Edge tra host+key theo cột `media_assets.cdn_pull_zone` (`dma-learning`→`BUNNY_LEARNING_*`, `dma-private`→`BUNNY_PRIVATE_*`). **KHÔNG migration thêm** (`cdn_pull_zone`/`storage_zone` có sẵn từ mig 005). V1 chỉ provision `dma-learning`; `dma`+`dma-private` lập khi tới phần đó. **Ký chuẩn = Bunny Standard URL Token Auth (SHA256):** `token = base64url(SHA256(key + path + expires))`, đổi `+`→`-` `/`→`_` bỏ `=`, ghép `?token=...&expires=...`. (Advanced `HS256-` HMAC directory-token chỉ cho HLS curriculum Stream — Phase sau.) *(v11 ĐẠT: smoke-test ký `/Chu_Vit_Con.mp3` → phát được; file trần = 403 — token auth chặn đúng.)*
- **D75 — ⭐ GATE HỌC LIỆU = engine entitlement secdef + Edge `get_signed_media_url` (mig 029 + Edge, v11).** Học liệu KHÔNG dùng consent engine (D71 chỉ cho ảnh trẻ); gác bằng **entitlement môn** (D51/D56). Engine **`check_curriculum_media_access(p_media_id, p_viewer_profile)`** secdef, **nhận tham số tường minh → test thẳng SQL Editor không cần login** (ưu thế như D71): resolve media→`linked_lesson_version_id`→`lessons.program_id`; lấy `profiles.school_id` của viewer; check tồn tại `school_subject_entitlements(school,program)` có `school_subscriptions.state ∈ {active,trial}` + còn hạn (`end_date IS NULL OR ≥ current_date`). Trả jsonb verdict + (nếu allowed) `bunny_path`/`cdn_pull_zone`/cờ `download_allowed`/`watermark_required`/`stream_only`/`expires_policy_minutes`. **PH (school_id NULL) + admin nền tảng → từ chối ở V1** (admin xem học liệu = nới sau; từ chối là an toàn). Grant `authenticated`+`service_role`; verify D15 `[]`. **Edge `get_signed_media_url`** chỉ ĐIỀU PHỐI: `getUser()` từ JWT → tra profile → gọi engine (service_role) → denied: ghi `media_access_denied` + 403 → allowed: ký token theo zone (D74) → ghi `curriculum_media_view` (qua `write_audit_log` D72) → trả `signed_url`. **Verify JWT = OFF** (hàm tự auth — khuyến nghị Supabase; công tắc JWT cổng yếu, anon cũng qua → để hàm gác mạnh hơn). **No-download V1 = tầng UI** (player ẩn nút tải) + watermark động + audit, KHÔNG chặn tuyệt đối ở token (signed URL vẫn GET được — trung thực D65/D68). **Pattern rộng:** mỗi loại media nhạy cảm có **một engine gác secdef nhận-tham-số** (consent cho trẻ D71 · entitlement cho học liệu D75 · role cho hợp đồng/báo cáo — sau); Edge chỉ điều phối + ký + audit, KHÔNG nhúng luật vào RLS. *(v11 ĐẠT — verify SQL mig 029: member→`entitled` allowed, parent→`not_school_member` denied, D15 `[]`, seed media gắn lesson_version đúng; ký token chứng minh ở smoke-test; Edge deploy chạy + auth gác đúng (tester anon → 401 `not_authenticated`). **Smoke-test `bunny-sign-test` = throwaway, XÓA sau go-live** — nó ký bừa không gate.)* **(v12 mở rộng — NHÁNH ẢNH TRẺ ráp xong):** Edge `get_signed_media_url` giờ **định tuyến theo cột link nào có mặt** (KHÔNG hardcode chuỗi enum `access_level`): `linked_lesson_version_id`→nhánh học liệu (engine D75) · `linked_moment_id`→**nhánh ảnh trẻ** gọi `media_consent_check` (D71, action `view`) → ký zone `dma-private` (D74). Cần cột mới **`media_assets.linked_moment_id`** (mig 030, FK→learning_moments) để ảnh móc vào moment mang `state`/consent; `get_child_journal` (mig 030) trả thêm `moments[]` (chỉ `approved`, kèm `media_id` để UI ký từng ảnh). Ảnh con-mình **watermark off** (ấm như album, linh hồn) · download off (V1). *(v12 ĐẠT login thật PH `parent.demo`: consent `display_in_app` ON → ảnh thật phát qua signed URL; file trần `dma-private/...jpg`=403; tắt consent → 403 `consent_missing` → card vẫn hiện nhưng ảnh đổi "Đang chờ ba mẹ đồng ý" (negative MIN-consent sống ở LIVE); moment draft không hiện. **Phép thử linh hồn: PH thấy có khoảnh khắc của con nhưng tự cầm quyền tắt/bật ảnh.**)* **(v13 — PLAYER Portal GV + read-side list):** `media_assets` Edge-only (D58) → client KHÔNG query trực tiếp để liệt kê track → RPC curated **`list_curriculum_media()`** (mig 031, gương D73) trả track entitled của trường caller (`media_id`+`title`+flags), gate `current_school_id() IS NOT NULL`; PH/admin (school NULL) → `[]`. Player Lovable `/portal/curriculum`: nút phát gọi `get_signed_media_url` (qua `invoke` — D76), `<audio>` từ `signed_url`, **watermark động** khi `watermark_required` (DMA·CTAN+tên trường+email+giờ, trôi), ẩn nút tải (`controlsList=nodownload`+contextmenu off — D68 không tuyên bố chống quay). *(v13 ĐẠT login thật: GV Cô Thúy Ngân nghe `Chú Vịt Con` + watermark trôi; PH `/portal/curriculum` rỗng. **Lưu ý:** watermark trên AUDIO = răn đe hiện-diện, yếu bản chất — cắn thật khi có VIDEO Stream sau.)*
- **D76 — ⭐ CORS cho `supabase.functions.invoke` PHẢI allow `x-client-info` (+`x-supabase-api-version`).** Client JS tự gắn header `x-client-info` mỗi lần `functions.invoke` → nếu Edge `Access-Control-Allow-Headers` thiếu nó, **browser chặn ở preflight OPTIONS** → request KHÔNG tới hàm (Console: *"Request header field x-client-info is not allowed…"*, Network: `net::ERR_FAILED`). Khác hẳn 403/401 từ hàm — gate có thể đúng mà live vẫn đỏ (lệch SQL-pass ↔ live-fail). Header chuẩn cho mọi Edge gọi từ browser: `"authorization, content-type, apikey, x-client-info, x-supabase-api-version"`. **Bẫy phụ (UX):** `functions.invoke` **throw trên mọi non-2xx** (403/401) → `data=null`, mất body; `reason` thật nằm ở **`error.context`** (một `Response`) → đọc `await error.context.json()` mới lấy được để map thông điệp mềm (vd `consent_missing`→"Đang chờ ba mẹ đồng ý"). *(v12: 1 fix CORS vá cả nhánh học liệu lẫn ảnh trẻ — smoke-test v11 không lộ vì gọi trực tiếp, không qua invoke.)*
- **D77 — ⭐ UPLOAD MEDIA = gate write-side secdef + Edge `upload_media` PUT Bunny Storage (mig 032 + Edge, v13).** Đối xứng D75/D71 (chiều ĐỌC) cho chiều **GHI**. **Gate `check_media_upload_access(p_moment_id, p_viewer_profile)`** secdef nhận-tham-số → test thẳng SQL Editor (như D71/D75): chỉ **nhân sự ĐÚNG trường của moment** (`profiles.school_id = moment_school_id(moment)`, gương D58 same_school-write); **PH + admin nền tảng (`school_id` NULL) → chặn `not_school_member`** (D48/D64 — PH KHÔNG upload moment V1). Trả verdict + `target_zone='dma-private'`/`access_level='private_child_media'`/`class_id`/`moment_school_id`. **Edge `upload_media`** chỉ ĐIỀU PHỐI: `getUser()` (Verify JWT OFF — tự auth) → gate (service_role) → **PUT Bunny Storage** bằng server storage-key → **insert `media_assets`** (service_role bypass RLS — bảng Edge-only D58) → audit `media_upload`/`media_upload_denied` (D67/D72). **⚠️⭐ STORAGE-KEY ≠ TOKEN-KEY (bài học hạ tầng then chốt):** PUT lên Storage dùng **Storage Zone "Password" (read-write AccessKey)** — **KHÁC** key ký CDN URL (D74). → secret RIÊNG **per-zone**: `BUNNY_PRIVATE_STORAGE_KEY`/`BUNNY_LEARNING_STORAGE_KEY` (upload) **vs** `BUNNY_*_TOKEN_KEY` (ký). **Endpoint Storage region-specific** `https://sg.storage.bunnycdn.com/{zone}{path}` (zone tạo ở Singapore) — KHÁC pull host (`*.b-cdn.net`/`BUNNY_*_HOST`). `bunny_path` lưu = path-SAU-zone (`/moments/{moment}/{uuid}.ext`); pull zone serve từ storage root → `get_signed_media_url` ký lại đúng. **Transport client→Edge = multipart `FormData`** (`functions.invoke({ body: formData })` — supabase-js nhận FormData, browser tự set boundary; D76 CORS `x-client-info` vẫn áp). **Validate** loại (`image/jpeg|png|webp`) + size (≤10MB) ở Edge. Ảnh con-mình: **watermark off + download off** (linh hồn album). **Pattern rộng:** mỗi loại media có gate-write secdef riêng (ảnh trẻ = same_school D77 · học liệu/contract = role/admin — sau); Edge điều phối+PUT+ghi+audit. *(v13 ĐẠT login thật: GV upload ảnh → `media_assets` row + object Bunny + audit → **preview ngay** qua `get_signed_media_url` (vòng GHI↔ĐỌC khép kín một màn `/portal/moments`); PH thử upload → `not_school_member` soft "Chỉ giáo viên của trường mới tải được ảnh"; gate 2 tầng D58 vẫn sống — PH thấy 1 moment, GV thấy 2.)* **(v14 mở rộng — NHÁNH GHI HỌC LIỆU `dma-learning`, đóng ma trận 2 zone × 2 chiều):** Edge `upload_media` giờ **route theo field FormData**: `moment_id`→nhánh ảnh trẻ (trên) · `lesson_version_id`→**nhánh học liệu** gọi gate **`check_curriculum_upload_access(p_lesson_version_id, p_viewer_profile)`** (mig 033, secdef nhận-tham-số → test thẳng SQL): chỉ **admin nội dung Dế Mèn** (`role IN super_admin/content_admin/senior_content_admin` — đổi bộ role ở 1 dòng); GV/master/PH → `not_curriculum_admin` (học liệu = IP Dế Mèn, KHÔNG phải của trường D75). PUT zone `dma-learning` bằng **`BUNNY_LEARNING_STORAGE_KEY`** (storage-key riêng zone — D77); insert `media_assets` `access_level=private_curriculum`, `watermark_required=true`/`stream_only=true`/`download_allowed=false`, `linked_lesson_version_id` set, **`linked_school_id=NULL`/`linked_class_id=NULL`** (IP toàn cục, không gắn trường); `metadata.title` (player `list_curriculum_media` đọc tên từ đây). **Cần RPC phụ `list_lesson_versions_for_admin()` (mig 034)** cho dropdown chọn bài — vì query Lovable embed `lesson:lessons(...)` lỗi **PGRST201 ambiguous** (`lesson_versions` có 2 FK→`lessons`: `lesson_id`+`current_version_id`) → RPC JOIN tường minh `lesson_id` né embed. Validate audio (`audio/mpeg|mp3|wav|m4a|aac|ogg|webm`, ≤50MB). **Pattern rộng kiện toàn:** mỗi loại media có gate-write secdef riêng — ảnh trẻ = same_school (D77 mig 032) · học liệu = role admin nội dung (D77 mig 033); Edge `upload_media` 1 cửa điều phối+PUT+ghi+audit, route theo field. *(v14 ĐẠT login thật: admin `info@demenart.com` `/portal/curriculum-admin` upload `Chu_Vit_Con.mp3` vào bài CTAN → "✓ Đã tải" + media_id; row verify zone `dma-learning`/`private_curriculum`/link đúng; GV Cô Thúy Ngân `/portal/curriculum` thấy **2 track** → phát track mới + watermark trôi; PH `/portal/curriculum` rỗng. **Bất đối xứng có chủ đích:** admin TẢI được nhưng KHÔNG nghe lại (gate đọc D75 từ chối school_id NULL) — nghiệm thu = GV trường có entitlement nghe được.)*

---

## E. FE / VẶT

- **D80 [stack: Supabase] — Cột chưa có trong generated TS types** → `(supabase as any)`. (← G280)
- **D81 [stack: TanStack Router] — union/indexed-access trong `useState` làm code-splitter chết** → tách `type` alias module-level. (← G557)
- **D82 [stack: TanStack Start] — SSR loader chạy KHÔNG có JWT** → nội dung gated fetch **client-side** (xem D13).
- **D83 [nếu clone Admin shell] — Icon registry:** icon chưa đăng ký âm thầm fallback → đăng ký khi thêm module. (← G513)
- **D84 [stack: Lovable TanStack Start + deploy] — ⭐ DEPLOY = Cloudflare Pages, KHÔNG Vercel (v15).** App Lovable dùng `@lovable.dev/vite-tanstack-config` khóa nitro **target cloudflare**. **Vercel 404** (build ra `dist/server/` không phải `.vercel/output`; `NITRO_PRESET=vercel` không override; fix thêm `nitro({preset:vercel})` rủi ro vỡ Lovable preview) → **dùng Cloudflare Pages** (build sẵn cho cloudflare target). **⚠️ Bẫy 404 trên Pages:** plugin Lovable **tự TẮT nitro khi không thấy môi trường Lovable** (build log `skipping nitro deploy plugin. Pass nitro: true to force-enable`) → ra `dist/client`+`dist/server` thô, **thiếu `_worker.js`** → `/`=404. **FIX:** thêm **key** `nitro: { preset: "cloudflare-pages" }` vào `defineConfig` của `vite.config.ts` (→ build ra `dist/_worker.js`+`dist/_routes.json`, Pages tự nhận, cùng `dist`). **TUYỆT ĐỐI KHÔNG** thêm **plugin** `nitro()` vào mảng plugins (gây duplicate-plugin, vỡ app — comment trong file cảnh báo). nitro = build-only → KHÔNG đụng Lovable preview (dev-server). Sửa file trực tiếp trong Lovable editor/GitHub, commit→sync `main`→Pages auto-rebuild — **KHÔNG nhờ AI Lovable viết** (hiểu nhầm thành thêm plugin). Pages build config: preset None · cmd `bun run build` · output `dist`. **Không cần `nodejs_compat`** (standby nếu sau có runtime Node-API error). **Env Pages = chỉ `VITE_*` public** (D63). **DNS (chuyển NS sang Cloudflare, GIỮ EMAIL GoDaddy):** Add a site → **Connect a domain** (KHÔNG Transfer — không đổi ownership) → import DNS → **đối chiếu+sửa email: mọi MX/CNAME-email/DKIM = DNS-only (xám), proxy cam GIẾT email; scan hay BỎ SÓT DKIM → thêm tay**; tắt DNSSEC GoDaddy trước; đổi NS GoDaddy→cặp `*.ns.cloudflare.com` (cấp riêng domain). **Chỉ đụng record WEB (A@/CNAME www); giữ đủ MX×2+DKIM×2+SPF+DMARC+SRV.** Undo = đổi NS về domaincontrol.com (DNS cũ GoDaddy không mất). Sau active → Pages Custom domains thêm apex+www (Active+SSL). **Supabase Auth:** Site URL=domain mới + Redirect URLs thêm `https://demenart.com/**`+www+pages.dev (giữ URL cũ). *(v15 ĐẠT: web+login LIVE `demenart.com`+SSL; email `info@demenart.com` nhận test sau đổi NS. Cloudflare Free; Account `8fdfc6a77a6d28a0a9781f9c66008a49`.)*

- **D85 [stack: Supabase] — ⭐ GUARD TRIGGER CHẶN CẢ `UPDATE`, KHÔNG CHỈ `INSERT` (v16 — mở rộng D30).** Bảng có `trg_guard_*` (Org/People: `schools`/`profiles`/`children`/`class_distributions`...) dùng `auth.uid()` để quyết cho sửa hay không; trong **SQL Editor `auth.uid()`=NULL** (D2) → guard **nuốt cả UPDATE âm thầm** (RETURN OLD: **không lỗi, không đổi dòng nào**, `rowcount` lệch kỳ vọng). *(v16: link `auth.users`↔`profiles` lần đầu `UPDATE … SET user_id` ra **`linked_count=0`** dù 6 auth user tồn tại đúng — thủ phạm là quên replica, KHÔNG phải email lệch.)* **FIX:** bọc **`SET session_replication_role = replica;` … `= DEFAULT;`** quanh **mọi DML** (INSERT **lẫn UPDATE/DELETE**) đụng bảng guard trong SQL Editor — không chỉ seed INSERT như D30 từng ghi. **Pattern gắn login pilot:** (1) Jean tạo `auth.users` tay trên Dashboard (Add user + **Auto Confirm** vì email demo giả không nhận mail xác nhận) — **KHÔNG** insert `auth.users` bằng SQL (schema auth nội bộ Supabase đổi theo version, đoán=hỏng, D1); (2) link bằng `UPDATE profiles SET user_id=u.id FROM auth.users u WHERE lower(trim(p.email))=lower(trim(u.email)) AND p.user_id IS NULL` **trong replica**; (3) verify `linked_count` + `unmatched_profiles`. **Onboarding tenant (D1 nhắc lại):** seed theo chuỗi FK `schools→profiles(staff school_id=trường·PH school_id=NULL)→subscriptions→entitlements→classes→class_distributions→children→enrollments→child_parents→consents`, idempotent `ON CONFLICT(id) DO NOTHING`, UUID prefix-theo-tenant để phân biệt bằng id KHÔNG bằng tên. Bảng **activity** (`learning_moments`/`moment_children`/`child_journey`) **KHÔNG guard** → seed KHÔNG cần replica. **Verify seed onboarding KHÔNG gọi RPC gated** (`get_child_journal` raise `not_authorized` khi auth.uid()=NULL) → đọc thẳng bảng. *(v16 ĐẠT: seed_010 onboard 2 trường pilot KHM-DN/MNDM-DN + 6 login → nghiệm thu login thật 7 mục: isolation 2 master · license-theo-thành-phần GV MNDM chỉ CTAN không Ballet · PH 2-con xuyên lớp · journal sống · GV upload ảnh thật tenant mới. Multi-tenant production-ready, KHÔNG sửa 1 dòng code — engine v3–v14 tự phục vụ tenant mới.)*

- **D86 [stack: Supabase] — ⭐ `request_sensitive_access` = CỬA CÓ KIỂM SOÁT cho admin xem PII trẻ (D48 carve-out, mig 035, v17).** Admin nền tảng mặc định 0 PII (moat ẩn danh); ngoại lệ duy nhất = RPC secdef **ghi audit TRƯỚC khi trả**. **Chữ ký:** `request_sensitive_access(p_child_id, p_reason, p_purpose, p_scope default 'identity')` → jsonb verdict. **Gate = `is_admin()` only** (master/GV/PH KHÔNG cần — RLS đã phục vụ PII theo trường/quan hệ; vai khác gọi → `not_platform_admin`). **reason+purpose BẮT BUỘC** (D48). **Ghi vết = `audit_logs` qua `write_audit_log` (D72)** — bảng này CÓ SẴN cột `reason`/`purpose` (đúng nhà thiết kế-sẵn); **KHÔNG đụng `privacy_requests`** (bảng đó là workflow yêu-cầu-đến Fork 2A, khác bản chất admin tự-xem → trộn vào = mờ mô hình). **⭐ MỌI đường ghi vết kèm actor:** `sensitive_access_granted` (allowed) · `sensitive_access_denied` (not_admin / child_not_found) — cả **kẻ chưa-login** (actor NULL) lẫn **sai-vai** (actor=PH) đều để lại dấu. **scope data-minimization:** `identity` (tên/nickname/dob/giới tính/global_id/state) · `full` (+phụ huynh contact +ghi danh). **Bypass RLS `children` CỐ Ý qua secdef** (gương D73 — không nới policy bảng gốc). Resolve trường-của-trẻ qua enrollment (D40 — children không có school_id). Grant `authenticated`; nhánh **denied test thẳng SQL Editor** (nhận tham số, D71), nhánh **granted nghiệm thu login admin thật** (D2/D3). *(v17 ĐẠT login thật admin `info@`/"Quản trị viên Test": granted scope identity → card "Hồ sơ định danh" + mã audit; scope full → +phụ huynh+ghi danh; PH Hùng mở màn → "không có quyền" + denied ghi kèm actor. `granted_total=2` actor≠NULL school=KHM; `denied_with_actor=1`.)* Màn UI `/portal/sensitive-access` (form child+reason+purpose+scope; `(supabase as any).rpc` đọc `data.allowed` — `.rpc` KHÔNG throw cho verdict).

- **D87 [stack: Supabase + Edge] — ⭐ SHARE LINK ẢNH PH NGOÀI APP = RPC tạo (gate consent) + Edge public resolve (re-check consent) (mig 036/036b + Edge, v17).** PH khoe ảnh khoảnh khắc con cho ông bà ngoài app. **Móng `share_links` ĐỦ SẴN** (D66 — `token`/`scope_type`/`scope_ref_id`/`expires_at`/`revoked_at`/`created_by_profile_id` + RLS Fork 3A creator-only D55) → **KHÔNG mig cột.** **(1) Tạo = RPC `create_private_share_link(p_moment_id, p_ttl_minutes default 1440)`** secdef grant authenticated: gate = **`media_consent_check(moment, current_profile(), 'share')`** (D71 — nhánh `share` ĐÃ CÓ sẵn: `required='private_share_link'` + cổng khung trường `sharing_mode='private_share_link'` + MIN-multi-child); allowed=false → trả nguyên verdict (UI map mềm `school_blocks_share`/`consent_missing`+blocking/`not_authorized`) + audit `share_link_denied`. allowed → token `encode(extensions.gen_random_bytes(24),'hex')` (**qualify D20**), insert + audit `share_link_created`, TTL clamp 5'..30 ngày. **(2) Resolve = Edge PUBLIC `resolve_share_link`** (Verify JWT **OFF**, KHÔNG getUser — ông bà không có JWT; D55/D66 "resolve bypass RLS qua service_role"): tra token → kiểm chưa-revoked + chưa-expired → **⭐ RE-CHECK `media_consent_check` (viewer=creator, action 'share') tại thời điểm xem** → PH rút consent / trường đổi khung → **link TỰ CHẾT** (`consent_revoked` 403) dù chưa hết hạn/chưa thu hồi → tìm `media_assets.linked_moment_id` (active) → ký Bunny `dma-private` short-expiry 5' (D74) → audit `share_link_resolved`. **KHÔNG trả PII** (tên trẻ/caption/trường) — chỉ `signed_url`; ông bà thấy ảnh, không thấy hồ sơ (data-minimization). **Pattern rộng kiện toàn:** engine media-nhạy-cảm thứ 4 — mỗi loại có gate secdef nhận-tham-số (consent ảnh trẻ D71 · entitlement học liệu D75 · upload same-school/admin D77 · **share = consent nhánh 'share' D87**); Edge điều phối+ký+audit, re-check tại-thời-điểm-xem cho thứ thu hồi được. *(v17 ĐẠT: SQL — KHM `no_external_sharing` → `school_blocks_share` (phép thử linh hồn: trường khóa khung thì PH đồng ý cũng không share); mở KHM→`private_share_link`+cấp consent An → `ok`. LIVE login thật: PH Hùng card CTAN An → dialog link `/share/{token}`; **tab ẩn danh** mở → ảnh hiện qua signed dma-private KHÔNG tên/caption/trường; **rút consent An → reload → 403 "Ảnh này hiện không còn được chia sẻ"** = link tự chết, PH cầm quyền tắt.)* **3 lỗi login-thật bắt:** D20 (gen_random_bytes không qualify) · D63 (tên `SUPABASE_SERVICE_ROLE_KEY`) · URL gõ nhầm. Màn UI: nút "Chia sẻ" trên `/portal/journal` card moment + route public `/share/$token` (KHÔNG Portal shell, KHÔNG login).

- **D88 [stack: Supabase] — ⭐ `audit_logs.actor_id` FK → `profiles.id`, KHÔNG `auth.users.id` (v18).** Mọi RPC/Edge ghi audit phải truyền **profile id của người gọi**, KHÔNG `auth.uid()`. `auth.uid()` = `auth.users.id` ≠ `profiles.id` → truyền thẳng vào `actor_id` (hoặc `p_fields.actor_id` của `write_audit_log` D72) → **23503 foreign_key_violation** → plpgsql **rollback CẢ giao dịch** (mọi INSERT trước đó mất sạch). **Bẫy chẩn đoán:** rollback khiến DB rỗng → audit query trả NULL → đánh lừa "RPC chưa từng chạy" (thực ra chạy tới tận bước audit cuối rồi mới gãy). **SQL Editor CHE lỗi** vì `auth.uid()=NULL` → `actor_id` nhận NULL (cột nullable) → không bao giờ chạm FK → chỉ **login thật** (uid có giá trị) mới lộ (D2/D3). **FIX:** đầu RPC resolve `select id into v_actor_profile from profiles where user_id=auth.uid()` (thường gộp luôn với resolve role để gate), truyền `v_actor_profile` vào audit. Gương: Edge `upload_media` đã đúng từ đầu (`actor_id:prof.id`). *(v18: `onboard_school` bản đầu truyền `auth.uid()` → login thật super_admin ra banner "lỗi kỹ thuật"; Network Response lộ `23503 actor_id not present in profiles` → mig 037b sửa dùng `v_actor_profile`.)*

- **D89 [stack: Supabase + Edge] — ⭐ SERVICE_ROLE BYPASS RLS NHƯNG KHÔNG BYPASS TRIGGER (v18 — họ hàng D85).** Edge dùng `svc = createClient(URL, SERVICE_ROLE_KEY)` để bypass RLS, NHƯNG `.update()`/`.insert()` của nó **vẫn chạy qua trigger** (guard `*_protected` D85). Cột bị guard ghim (`user_id`/`role`/`school_id`/`master_profile_id` ở `profiles`; `name`/`code`/`master_profile_id`/`state` ở `schools`) → trong Edge **`auth.uid()`=NULL** (service_role không có JWT user) → `is_admin()=false` → guard **ghim `new.X := old.X`** → UPDATE **"thành công" giả** (không throw, nhưng giá trị bị nuốt về cũ). **Lỗi CÂM:** Edge trả ok, nhưng cột không đổi → triệu chứng lệch ở tầng app (vd portal "chưa kích hoạt" vì `user_id` vẫn NULL dù invite trả thành công). **FIX:** cột bị guard phải sửa qua **RPC secdef** có **`set local session_replication_role = replica`** trong thân (replica bỏ qua trigger; `local` tự reset cuối giao dịch) — Edge gọi RPC thay vì `.update()` thẳng. RPC grant **service_role only** (Edge gọi). *(v18: Edge `invite_master` `.update({user_id})` không throw nhưng guard nuốt → master login được nhưng portal "chưa kích hoạt" → mig 039 `link_master_user` (secdef+replica), Edge gọi RPC; vá Sao Mai đang kẹt bằng `link_master_user` tay.)* **Pattern onboarding tenant qua app (Lớp 1+2):** RPC `onboard_school` (secdef, gate role bán-license super/operation/sales, vòng FK school(master NULL)→master→update school, total từ `pricing_config` D6, audit actor=profile-id D88) + Edge `invite_master` (createUser auto-confirm D85 + password tạm dùng-một-lần KHÔNG vào audit/console/localStorage + `link_master_user` D89 + chống trùng vì `user_id` KHÔNG UNIQUE → tự kiểm email trong auth.users). `has_subject_entitlement` nhận `('trial','active')` để trường trial mới onboard học được ngay (trial=active-có-hạn, `end_date>=today` tự khóa).

- **D90 [stack: Supabase] — ⭐ DUMP TRUNG THỰC TỪ LIVE ĐỂ BACKUP/PHỤC HỒI (v19).** Khi lưu repo / dựng-lại từ DB sống (D1 — KHÔNG chép tay từ trí nhớ chat: sai 1 ký tự = backup hỏng CÂM): **(1) Hàm** = `pg_get_functiondef(oid)` (đã gồm mọi fix inline, idempotent CREATE OR REPLACE) — NHƯNG chỉ trả THÂN, **KHÔNG grant**. **(2) Grant phải dump RIÊNG** từ `pg_proc.proacl` (`aclexplode` → `REVOKE ALL … FROM PUBLIC` + `GRANT … per grantee`), vì **`CREATE OR REPLACE FUNCTION` RESET grant về mặc định PUBLIC execute** (D15/D20 — phục hồi thiếu grant = hàm secdef hở cho anon/PUBLIC; secret như `link_master_user`/`write_audit_log`/`create_notification` phải service_role-only). Chạy file grant **SAU** file hàm. **(3) DDL khác** (cột mới như mig 030 `linked_moment_id`) cũng KHÔNG có trong dump hàm → tách qua `format_type`+`pg_get_constraintdef`. **(4) Seed data** = `to_jsonb(t.*)` + `jsonb_populate_record(NULL::tbl, …)` + `ON CONFLICT DO NOTHING` → tự bê đúng MỌI kiểu cột (enum/uuid/timestamptz/jsonb/array) KHÔNG liệt kê cột tay, idempotent, chịu mọi PK/unique. **FK-ordered** (parent trước con); **vòng chicken-egg** (school↔master) = insert con NULL → UPDATE cuối. **(5) Cột FK→`auth.users` ép NULL khi seed** (`profiles.user_id`) — DB trắng auth.users rỗng → seed cứng user_id = FK-fail; phục hồi xong **re-invite**. **Snapshot TRUNG THỰC** (giữ cả trạng thái WITHDRAWN, KHÔNG "dọn đẹp"). **Mỗi ô dump-cell = 1 file repo** (SQL Editor trả ô cuối — gói trọn 1 `string_agg`/`jsonb` để copy nguyên). **Thứ tự phục hồi DB trắng:** `001→025` (đã có repo) → `026_039_functions.sql` → `026_039_grants_and_column.sql` → seeds. *(v19: trả nợ-dồn v12 — 14 hàm 026–039 + grant + cột + seed pilot 010–012; đối chiếu seed KHỚP audit từng bảng.)*

- **D91 [stack: Supabase + Lovable] — ⭐ MASTER TỰ QUẢN TRƯỜNG = 2 RPC còn thiếu + tái dùng đường raw sẵn (mig 040, v20).** Audit cụm Org/People (D1) trước khi viết lộ ra: **`master_admin` ∈ `is_school_admin()`** (`current_profile_role() in ('master_admin','sub_admin')`) → **phần lớn self-manage RLS ĐÃ phục vụ sẵn**, KHÔNG viết gì: tạo lớp = raw INSERT `classes_insert_school` · provision GV = raw INSERT `profiles_insert_provision` (school_id=trường, user_id NULL) · tạo+ghi danh trẻ = RPC `create_child_and_enroll` (đã có từ v3). **Chỉ 2 lỗ thật → mig 040:** **(1) `assign_class_distribution(p_class_id, p_program_id, p_lead_teacher_id)`** — `class_distributions` CHỈ có 2 policy SELECT, KHÔNG INSERT/UPDATE → master không rót môn được. RPC secdef gate: master same_school + **⭐ LICENSE-GATE `has_subject_entitlement(school, program)`** (D51/D56 — chỉ rót MÔN ĐÃ MUA active/trial còn hạn; *phép thử linh hồn: MNDM không mua Ballet → dropdown UI lọc sạch + RPC raise `subject_not_entitled`*) + lead-teacher đúng trường + chống trùng (`class_distributions` KHÔNG có unique(class,program) → tự kiểm `distribution_exists`). **(2) `provision_parent_and_link(p_child_id, p_full_name, p_email, p_phone, p_link_role)`** — vá **D29 RETURNING-câm**: PH có `school_id=NULL` (D40 thấy-con-không-thấy-trường) → raw INSERT profile PH thì cả 3 SELECT policy `profiles` false → RETURNING rỗng, master không lấy được id để link. → RPC **atomic**: gate master + `child_in_my_school` + tôn trọng trigger max-2-parent (`primary`/`secondary` theo thứ tự, raise `max_parents_reached`) → tạo PH (school_id NULL, user_id NULL) + insert `child_parents` → trả `profile_id`. **2 bảng đụng KHÔNG có guard trigger trên INSERT** (guard chỉ UPDATE) → secdef bypass RLS đủ, **KHÔNG cần replica** (khác D30/D85). Mirror `create_child_and_enroll`: **KHÔNG audit** (đồng cấp self-provision — thêm khi cần). Grant `authenticated`, verify D15 `[]`. **UI `/portal/school` 3 tab** (Lớp&Môn · Giáo viên · Trẻ&Phụ huynh): dropdown môn nguồn `school_subject_entitlements` lọc client active/trial+còn-hạn; map `error.message`→toast tiếng Việt (`.rpc()` KHÔNG throw → đọc `error.message` trực tiếp, KHÔNG try/catch). **⭐ Quyết B — GV vào màn CHẾ ĐỘ CHỈ-ĐỌC (D45 "2 portal thông nhau"):** nav 4-vai (master/sub_admin/lead/assistant); cờ `canManage = role ∈ {master_admin,sub_admin}` ẩn MỌI form ghi với GV (chỉ thấy danh sách), PH/admin-nền-tảng → "Không có quyền". **⭐ Bẫy deploy-lag (D84 nhắc lại):** sửa toast đúng nhưng test thấy câm 3 lần — thủ phạm **Cloudflare Pages chưa rebuild** (commit→build vài phút); test bản cũ. Phân biệt deploy-lag vs code-sai = test trong **Preview Lovable** (chạy ngay) vs `demenart.com` (chờ rebuild). *(v20 ĐẠT login thật: master KHM thêm lớp/rót CTAN+GV/thêm GV/trẻ/2PH → toast xanh; rót trùng→`distribution_exists` toast đỏ; PH thứ 3→`max_parents_reached`; **MNDM dropdown CHỈ CTAN không Ballet** (license linh hồn); GV Cô Linh vào read-only thấy danh sách không thấy form; isolation 2 tenant. Engine v3–v14 + 8 cụm RLS KHÔNG sửa 1 dòng — master quản trường tự được mọi engine phục vụ.)*

- **D92 [stack: Supabase + Lovable] — ⭐ D29 CÓ CHIỀU ĐỌC: PH `school_id=NULL` → master KHÔNG đọc lại được để HIỂN THỊ (mig 041, v21).** D29 vốn nói chiều GHI (RETURNING-câm). v21 lộ **mặt sinh đôi ở chiều ĐỌC:** master mở `/portal/school` tab Trẻ&PH → danh sách PH hiện **"—" / "Chưa có email"** dù DB có data thật. Nguyên nhân: UI đọc PH qua **embed `profiles!parent_profile_id`**, mà cả 3 SELECT policy `profiles` (`profiles_select_admin`=`is_admin()` · `profiles_select_same_school`=`school_id IS NOT NULL AND same_school` · `profiles_select_self`=`user_id=auth.uid()`) đều **false với PH** (PH `school_id=NULL` D40 → nhánh same_school chết ở `IS NOT NULL`; master không phải admin/không phải chính PH) → embed trả null → "—". **Bằng chứng không-phải-bug-data:** PH seed thật (Hùng, có login) cũng "—", không chỉ PH mới thêm. **FIX = RPC curated secdef `get_child_parents(p_child_id)` (gương D73), KHÔNG nới policy `profiles`:** gate master/sub same_school (qua `user_school_ids()`) + bypass RLS CỐ Ý → trả CHỈ nhãn an toàn `[{full_name,email,phone,link_role,has_login}]`. **TUYỆT ĐỐI KHÔNG nới `profiles_select_same_school` cho `school_id IS NULL`** → sẽ lộ PH **mọi trường** cho mọi master (convention school_id-NULL load-bearing — D52/D56). **Pattern rộng (kiện toàn D73):** vai X cần HIỂN THỊ nhãn của row mà RLS bảng gốc chặn X đọc → **RPC secdef curated trả nhãn, KHÔNG nới RLS** — áp cho cả chiều ghi (D29) LẪN chiều đọc-để-render. **⭐ Bài học hạ tầng kèm theo — REVOKE/GRANT hàm secdef chạy TÁCH BLOCK khỏi CREATE khi có nguy cơ rollback:** v21 lần đầu gói `CREATE…+REVOKE…+SELECT verify-gọi-hàm` trong 1 khối → SELECT **raise `not_authorized`** (gate đúng, `auth.uid()`=NULL ở SQL Editor — D2) → **abort transaction → CREATE bị rollback** (`fn_exists=0` đánh lừa "chưa tạo" — họ hàng D88). Chạy lại với verify-KHÔNG-gọi-hàm → CREATE commit NHƯNG **REVOKE trong-cùng-block không phủ hết** default PUBLIC của `CREATE OR REPLACE` → `leaky_grants=['get_child_parents']` + `anon` execute (D15 sống). → **REVOKE ALL FROM PUBLIC + FROM anon chạy KHỐI RIÊNG, verify grant RIÊNG (không gọi hàm để khỏi raise)** → sạch. **Quy tắc:** verify hàm secdef-có-gate **đừng GỌI hàm trong cùng migration** (raise kéo rollback); verify bằng soi `pg_proc`/`proacl`, nghiệm thu nhánh gate bằng **login thật** (D2). *(v21 ĐẠT: mig 041 sau harden `grantees=[authenticated,postgres,service_role]` leaky=[]; login master KHM thật → `/portal/school` PH An hiện "Nguyễn Văn Hùng"+email thật, không còn "—". + UI vá `link_role` lưu CODE `mother`/`father`/`guardian` (trước lưu nhãn VN "Mẹ"), render map ngược, legacy `primary`/`secondary` giữ nguyên.)*

- **D93 [stack: Supabase + Edge + Lovable] — ⭐ MASTER TỰ MỜI STAFF/PH ĐĂNG NHẬP = nhân pattern `invite_master`; gate same-school KHÁC NHAU theo có/không `school_id` (mig 042/043 + Edge `invite_staff`/`invite_parent`, v22).** Đóng nốt vòng "trường tự vận hành KHÔNG cần Jean" (D91 v20 cho master tự *thêm* lớp/GV/trẻ/PH; v22 cho master tự *mời họ đăng nhập*). **Pattern Edge mời (sao y `invite_master` v18):** `getUser` tự gác (Verify JWT OFF) → đọc role caller qua svc → `createUser` auto-confirm (D85, email demo không nhận mail) + **password tạm dùng-một-lần** (trả về UI 1 lần, KHÔNG vào audit/console/localStorage) → chống trùng (`user_id` KHÔNG UNIQUE → tự `listUsers` kiểm email, có rồi thì link id cũ KHÔNG tạo mới) → link `user_id` qua **RPC secdef + `set local session_replication_role=replica`** (D89 — service_role bypass RLS NHƯNG KHÔNG bypass guard trigger, phải replica) → audit actor=**caller profile id** (D88, KHÔNG `auth.uid()`). RPC link grant **service_role only** (Edge gọi); RPC list (nếu có) grant authenticated. **⭐ GATE SAME-SCHOOL — điểm khác cốt lõi GV↔PH:** **(A1 GV)** GV có `school_id` thẳng → Edge `invite_staff` so `staff.school_id === caller.school_id`; UI tab Giáo viên đọc `profiles`+`user_id` (RLS same_school lọc sẵn) → nút "Mời" cạnh GV `user_id IS NULL`. **(A2 PH)** PH `school_id=NULL` (D40 thấy-con-không-thấy-trường) → KHÔNG so school_id được → **đi vòng** `child_parents(parent)→child_id` → `enrollments(child)→class_id` → `classes.school_id`, kiểm PH có ≥1 con trong trường caller (gương D92 "PH của trường mình phải qua trẻ"); UI `ParentsPanel` đọc PH qua `get_child_parents` (D92) đã trả `has_login` → nút "Mời" cạnh PH chưa login. **Target role gate cứng:** `link_school_user` chỉ nhận lead/assistant, `link_parent_user` chỉ nhận primary/secondary_parent (nới từ `link_master_user` vốn khoá `master_admin`). **2 bảng đụng (`profiles`) guard chỉ UPDATE → link qua replica đủ, INSERT không cần.** **UI:** `InviteResultDialog` dùng CHUNG GV/PH (text trung tính "người dùng"); dialog hiện email+password tạm+copy+cảnh báo một-lần; `reused` → note không-tạo-mật-khẩu-mới; map `error.context.json()` (D76) → toast tiếng Việt (`different_school`/`already_has_login`/`parent_no_child`…); nút chỉ hiện khi `canManage` (Quyết B — GV read-only KHÔNG thấy). **⭐ Test gate cứng cho hàm gọi-từ-Edge (KHÔNG qua UI):** app KHÔNG expose supabase client ra `window` → dùng **`fetch` thẳng tới Edge endpoint** với `access_token` lấy từ `localStorage` (key `sb-<ref>-auth-token`), project ref parse từ tên key → JWT thật → gate chạy đúng (khác SQL Editor `auth.uid()=NULL` — D2). *(v22 ĐẠT login thật: **A1** master mời GV Lê Thảo My → dialog password tạm → GV login KHÔNG kẹt "chưa kích hoạt" (D89 sống) → GV read-only KHÔNG nút Mời (Quyết B) → isolation 4 GV KHM. **A2** master mời PH Trần Quốc Toản → PH login → `/portal/journal` "Nhật ký của con thuộc về con và gia đình" (linh hồn DMA). **Same-school CỨNG:** master KHM `fetch` Edge `invite_parent` với PH MNDM → `403 different_school` — gate đường-vòng `child_parents` đứng dù né UI. Engine v3–v14 + 8 cụm RLS KHÔNG sửa 1 dòng.)* **Pattern rộng kiện toàn (họ D91):** master tự-quản trường = (a) RLS/RPC tự-thêm (D91), (b) Edge mời-login đối-xứng-theo-vai (D93); gate same-school dùng `school_id` thẳng cho vai CÓ school, đi vòng quan-hệ-trẻ cho vai `school_id=NULL`.

---

## F. TRUNG TÂM TRA CỨU (registry self-documenting — dựng từ Phase 1)

- **D100 — Module admin mới điền ĐỦ 4 trường NGAY:** `description` + `usage_note` + `search_keywords` (mảng) + `related_slugs`.
- **D101 — Hub/registry liên kết ĐỐI XỨNG hai chiều với con.**
- **D102 — Hub trỏ module ẨN → line VÔ HÌNH** → trỏ thêm ≥1 module *enabled*.
- **D103 — Liên kết một chiều giữa 2 module thường HỢP LỆ** (chỉ hub mới bắt buộc đối xứng).
- **D104 — Search content-based:** khớp label+description+usage_note+search_keywords, unaccent.

---

*Seed khởi tạo cho DMA, chắt lọc Hiến pháp DMWS (v170) + Trung Tâm Tra Cứu + đặc tả media Tài liệu G. Nuôi tiếp hệ D. **Cập nhật 2026-06-24 (v3): thêm D15/D28/D29/D30; bổ sung helper DMA vào D23; nghiệm thu login thật vào D40/D48.** **Cập nhật (v4): thêm D52 (RLS Curriculum); thêm `current_school_id()` vào D23.** **Cập nhật 2026-06-24 23:41 GMT+7 (v5): thêm D53 (RLS cụm Sessions — scope lead/assistant, admin-no-PII, school-admin step-in), D54 (RLS cụm Journey — PH sở hữu nhật ký, admin-no-PII, badge khử cạnh tranh); thêm 3 helper `cd_school_id`/`session_school_id`/`is_session_lead` vào D23; ghi nghiệm thu v5 vào D40/D44/D45/D46/D48.** **Cập nhật 2026-06-25 (v6): thêm D55 (RLS cụm Privacy/Consent — engine min(trường,PH) ở Edge không RLS; Fork 1A PH-only ghi consent; Fork 2A admin carve-out đọc privacy_requests; Fork 3A share_links creator-only). KHÔNG helper mới. Nghiệm thu login thật 4 vai trò.** **Cập nhật 2026-06-25 03:52 GMT+7 (v7): thêm D56 (RLS cụm Business/License — che cột tài chính bằng tách-quyền-đọc-ở-tầng-bảng; WRITE admin-only = trường không tự cấp license; KHÔNG helper mới). Nghiệm thu login thật 4 vai + 3 bằng chứng vàng. 6/8 cụm RLS xong, 104 policy.** **Cập nhật 2026-06-25 11:44 GMT+7 (v8): ⭐ ĐÓNG 8/8 CỤM RLS. Thêm D57 (RLS Ops/Config — 5 bảng, audit append-only/admin-read carve-out, notifications self-scope, app_settings is_public gate), D58 (RLS Moments — cụm #8, gate approved HAI TẦNG learning_moments+moment_children, admin-no-PII, PH-không-tạo-content; +3 helper moment_school_id/is_moment_parent/moment_is_approved), D59 (móng config-driven notification_types+app_settings, bộ lọc xuyên-suốt-vs-tự-đóng-kín), D70 (hoãn anti-fraud device/GPS, substrate audit_logs có sẵn). Helper definer = 29. RLS policy = 125. Nghiệm thu login thật 4 vai trò toàn bộ 9 cụm panel.** **Cập nhật 2026-06-25 12:37 GMT+7 (v9): ⭐ thêm D71 (consent engine `media_consent_check` — mig 026: MIN-multi-child, school-staff bypass, gate `approved`, cổng khung-trường min(trường,PH); nhận tham số → test thẳng SQL Editor) + D72 (RPC vận hành "system-only writer" — mig 027 `create_notification`+`write_audit_log`: bảng no-INSERT-policy ghi qua secdef, REVOKE cả `authenticated` chỉ `service_role`). Helper definer = 32. UI Chặng 2 màn thật đầu tiên: `/portal/notifications` (render config-driven qua notification_types). Bunny tạm tịt (nghi mạng VN, không phải sập diện rộng) → Edge media serving A3 hoãn phiên sau.** **Cập nhật 2026-06-25 13:23 GMT+7 (v10): ⭐ thêm D73 (RPC đọc curated `get_child_journal` — mig 028: bắc cầu PH↔nhãn school-scoped, trả nhãn an toàn KHÔNG lộ giáo trình, grant authenticated). Helper definer = 33. **Đóng 4 màn thật Chặng 2** (Bunny-độc-lập): `/portal/notifications` (v9) + `/portal/consent` + `/portal/support` + `/portal/journal` (trái tim DMA) — đều nghiệm thu login thật PH Bé Jenny. Dọn rác consents test (consents_total=4). Bunny vẫn tịt → Edge media (Ngã A) chờ phiên sau.** **Cập nhật 2026-06-25 14:20 GMT+7 (v11): ⭐ Bunny vào lại → ĐÓNG MẢNH MEDIA ĐẦU TIÊN (học liệu). Thêm D74 (topology 3-zone `dma`/`dma-learning`/`dma-private` theo trục token, secret-per-zone, ký Standard SHA256) + D75 (gate học liệu = engine `check_curriculum_media_access` mig 029 + Edge `get_signed_media_url`, entitlement môn, Verify JWT OFF, no-download=UI). Helper definer = 34. Nghiệm thu: smoke-test phát nhạc qua signed URL (file trần=403); verify029 member-allowed/parent-denied/D15 `[]`; Edge deploy chạy + auth 401. Mig 001→029. Smoke-test `bunny-sign-test` chờ xóa.** **Cập nhật 2026-06-25 17:39 GMT+7 (v12): ⭐ ĐÓNG NHÁNH ẢNH TRẺ → journal có ảnh thật (trái tim DMA). Thêm D76 (CORS `functions.invoke` allow `x-client-info`; +bẫy `error.context.json()` lấy reason cho UX mềm) + mở rộng D75 (Edge route theo cột link, nhánh ảnh trẻ gọi `media_consent_check`; cột mới `media_assets.linked_moment_id` mig 030; `get_child_journal.moments[]`). Helper definer = 34 (không đổi — mig 030 chỉ thêm cột + sửa RPC sẵn có). Mig 001→030. Nghiệm thu login thật PH `parent.demo`: ảnh thật phát qua signed URL zone `dma-private` / file trần 403 / tắt consent → 403 `consent_missing` UI "Đang chờ ba mẹ đồng ý" / draft ẩn. Việc treo: xóa `bunny-sign-test`, lưu mig 026–030 repo, caption "[seed]" ở DB, sửa seed_007.* **Cập nhật 2026-06-25 18:39 GMT+7 (v13): ⭐ ĐÓNG KHỐI MEDIA ĐỐI XỨNG — đọc (serving) + ghi (upload), cả 2 zone. Thêm D77 (upload_media: gate write-side `check_media_upload_access` mig 032 + Edge PUT Bunny Storage; ⭐ STORAGE-KEY≠TOKEN-KEY per-zone, endpoint region `sg.storage.bunnycdn.com`, transport FormData) + mở rộng D75 (player Portal GV + RPC curated `list_curriculum_media` mig 031 vì media_assets Edge-only). Helper/RPC definer = 36 (+`list_curriculum_media`, +`check_media_upload_access`). Edge mới `upload_media` (Verify JWT OFF). 2 route mới `/portal/curriculum` (player nhạc+watermark) + `/portal/moments` (upload+preview). Mig 001→032. Nghiệm thu login thật: GV nghe nhạc+watermark / PH `/portal/curriculum` rỗng (A); GV upload ảnh+preview ngay / PH chặn `not_school_member` (B1). 46 bảng · 125 policy KHÔNG đổi. Việc treo: xóa `bunny-sign-test`, lưu mig 026–032 repo, dọn ảnh test DMWS móc nhầm moment Jenny, caption "[seed]", sửa seed_007.***  **Cập nhật 2026-06-25 19:34 GMT+7 (v14): ⭐ ĐÓNG MA TRẬN MEDIA 2 ZONE × 2 CHIỀU + MIN-MULTI-CHILD LIVE. Mở rộng D77 (nhánh ghi học liệu `dma-learning`: gate `check_curriculum_upload_access` mig 033 = admin nội dung; RPC phụ `list_lesson_versions_for_admin` mig 034 né embed PGRST201 ambiguous; Edge `upload_media` route theo field `moment_id` vs `lesson_version_id`; storage-key `BUNNY_LEARNING_STORAGE_KEY`; route `/portal/curriculum-admin`). Mở rộng D71 (MIN-multi-child nghiệm thu LIVE: seed_009 moment nhóm Jenny+Jimmy, PH chặn-vì-Jimmy→cấp→ảnh hiện). Hàm/RPC definer = 38 (+`check_curriculum_upload_access`, +`list_lesson_versions_for_admin`). Edge `upload_media` giờ 2 nhánh (ảnh trẻ→dma-private · học liệu→dma-learning). Mig 001→034 · seed 001→009. Nghiệm thu login thật: admin upload học liệu→GV nghe+watermark/PH rỗng (B2); PH ảnh nhóm "đang chờ"→cấp Jimmy→hiện (MIN). 46 bảng · 125 policy KHÔNG đổi. Việc treo: xóa `bunny-sign-test` + ảnh test DMWS rác (lộ rõ ở journal), lưu mig 026–034 repo, caption "[seed]", sửa seed_007.***  **Cập nhật 2026-06-26 08:15 GMT+7 (v15): ⭐ DỌN §4 + DEPLOY LÊN demenart.com (WEB & EMAIL LIVE). Thêm D84 (deploy Lovable TanStack Start = Cloudflare Pages KHÔNG Vercel; fix 404 = `nitro:{preset:"cloudflare-pages"}` key trong vite.config — plugin Lovable tự tắt nitro ngoài sandbox → thiếu `_worker.js`; KHÔNG thêm plugin nitro() = duplicate; DNS chuyển NS GoDaddy→Cloudflare giữ email DNS-only; Supabase Auth domain mới). Ngã D: xóa Edge `bunny-sign-test` (trả nợ §4) + row media TRÙNG `568b6c5a` (KHÔNG phải poster "Vịt Con" — **đính chính v14 §4 mục 2 ghi SAI**: `jenny_buoi1.jpg`/Vịt Con là ảnh demo Jenny HỢP LỆ, GIỮ). Ngã A: `demenart.com`+`www` Active+SSL trên Cloudflare Pages; email `info@demenart.com` nhận test OK sau đổi NS (9 record email migrate đúng DNS-only). **DB KHÔNG đổi: 46 bảng · 38 hàm definer · 125 policy · mig 001→034 · seed 001→009** (phiên hạ tầng thuần). SYSTEM_MAP v0.16. Việc treo MỚI: SPF KÉP cần gộp (sai sẵn từ GoDaddy, migrate y nguyên — chuẩn DNS chỉ 1 SPF/domain), Vercel project dormant xóa được. Kế: onboard data trường thật · request_sensitive_access · share link.*** **Cập nhật 2026-06-26 09:54 GMT+7 (v16): ⭐ ONBOARD 2 TRƯỜNG PILOT → MULTI-TENANT VALIDATED LIVE. Thêm D85 (guard trigger chặn cả UPDATE không chỉ INSERT — link auth.users↔profiles lần đầu linked_count=0 vì quên `session_replication_role=replica`; + pattern onboarding tenant + gắn login: tạo auth.users tay Dashboard auto-confirm, link UPDATE-join-theo-email trong replica, seed theo chuỗi FK idempotent UUID-prefix-tenant, verify đọc thẳng bảng không gọi RPC gated). Data: seed_010 (KHM-DN CTAN+Ballet·4seat·8trẻ·7PH + MNDM-DN CTAN-only·3seat·6trẻ·5PH; mỗi trường 1 PH 2-con xuyên lớp + 1 bé consent-pending) + seed_011 (journey+moment hoạt động An/Khang). 6 login mới `Test@123`. Nghiệm thu login thật 7 mục: 2 master isolation (school_id khác) · GV MNDM chỉ CTAN không Ballet (license theo-thành-phần ở UI) · PH toggle 2 con xuyên lớp · journal Hành trình+Khoảnh khắc sống (journey[] đã wire ra UI) · GV KHM upload ảnh thật → "✓ Đã tải" (chiều GHI tenant mới). **Bài học vàng: tenant mới chạy TRỌN VÒNG ĐỜI — onboard→isolation→license→journal→GV upload — KHÔNG sửa 1 dòng code; engine v3–v14 (8 cụm RLS + entitlement + consent + upload gate + journal RPC) tự phục vụ. Multi-tenant production-ready.** **DB cấu trúc KHÔNG đổi: 46 bảng · 38 hàm definer · 125 policy · mig 001→034. Seed 001→011 (3 tenant trong DB: DEMO-001 + KHM-DN + MNDM-DN).** SYSTEM_MAP v0.17. Việc treo: SPF kép, lưu mig 026–034+seed 010/011 repo, profile GV/PH còn lại chưa có login. Kế: onboard hoạt động S2 · admin onboarding UI (1B) · request_sensitive_access · share link.***  **Cập nhật 2026-06-26 11:24 GMT+7 (v17): ⭐ 3 NGÃ — DATA ĐA-MÔN 2 TENANT (A) · SENSITIVE-ACCESS CARVE-OUT (B) · PRIVATE SHARE LINK (C).** **(A)** seed_012: journey+moment hoạt động MNDM Hà/Phúc (giống An/Khang) + **Ballet moment cho An (KHM)** → An có CTAN+Ballet trong CÙNG nhật ký (thép chờ #1 đa-môn). Nghiệm thu login thật 4: PH Thành 2-con xuyên lớp S2 · PH Hùng tab An Hành trình 3 dòng (CTAN+Ballet) · GV Hân thấy moment lớp mình · **GV Hân upload ảnh thật → chiều GHI tenant S2**. **(B)** mig 035 `request_sensitive_access` (D86): cửa-có-kiểm-soát admin xem PII trẻ — gate `is_admin()` only, reason+purpose bắt buộc, **ghi `audit_logs` qua `write_audit_log` TRƯỚC khi trả** (KHÔNG đụng privacy_requests), scope identity/full data-minimization, bypass children RLS secdef (gương D73), mọi đường (granted/denied/chưa-login/sai-vai) ghi vết kèm actor. Nghiệm thu login admin thật: granted card "Hồ sơ định danh"+mã audit (identity & full) · PH chặn "không có quyền"; `granted_total=2` `denied_with_actor=1`. Màn `/portal/sensitive-access`. **(C)** mig 036/036b `create_private_share_link` + Edge public `resolve_share_link` (D87): PH khoe ảnh ngoài app — tạo gate qua `media_consent_check('share')` (min trường-PH, share_links đủ cột KHÔNG mig); resolve Edge public re-check consent → **link tự chết khi PH rút consent** dù chưa hết hạn; KHÔNG trả PII chỉ signed_url. Nghiệm thu: KHM `no_external`→`school_blocks_share` (phép thử linh hồn) → mở→`ok`; tab ẩn danh ảnh hiện không tên/caption/trường; rút consent→403 "không còn chia sẻ". Màn nút "Chia sẻ" journal + route public `/share/$token`. **3 lỗi login-thật bắt → 3 luật:** ⭐ **D20 mở rộng** (`search_path=''` phải qualify hàm extension `extensions.gen_random_bytes`; SQL Editor che lỗi) · ⭐ **D63 mở rộng** (Edge service-key = tên built-in `SUPABASE_SERVICE_ROLE_KEY` tự inject, KHÔNG tự chế `SERVICE_ROLE_KEY` → `supabaseKey is required`) · ⭐ **D2 mở rộng** (verify side-effect đừng đọc cùng-statement + đừng window hẹp). **DB cấu trúc KHÔNG đổi: 46 bảng · 40 hàm definer (+request_sensitive_access +create_private_share_link) · 125 policy · mig 001→036. Seed 001→012.** +1 Edge `resolve_share_link` (public, Verify JWT OFF). SYSTEM_MAP v0.18. **Data state:** KHM-DN `sharing_mode=private_share_link`; consent An `private_share_link` (`d1…e1`) hiện **WITHDRAWN** (để vậy sau nghiệm thu — Jean OK). Việc treo: SPF kép, lưu **mig 026–036 + seed 010–012** repo (nợ dồn), nút thu hồi share link tay (UI chưa có), profile GV/PH còn lại chưa login. Kế: **admin onboarding UI (1B) — đã đủ data thật làm khuôn** · dọn repo · revoke-share-link UI.*** **Cập nhật 2026-06-26 16:15 GMT+7 (v18): ⭐ NGÃ D — ADMIN ONBOARDING UI 2 LỚP (onboard trường + mời master qua app).** Thêm D88 (`audit_logs.actor_id` FK→`profiles.id` KHÔNG `auth.uid()`; truyền auth.uid()=23503 rollback cả giao dịch, DB rỗng đánh lừa "chưa chạy", SQL Editor che vì uid NULL) + D89 (service_role bypass RLS KHÔNG bypass trigger; Edge `.update()` cột guard bị NUỐT câm không throw → sửa qua RPC secdef+`set local session_replication_role=replica`, grant service_role; + pattern onboard 2 lớp + password tạm dùng-một-lần + chống trùng user_id-không-UNIQUE). **Lớp 1** mig 037/037b: `onboard_school` (gate super/operation/sales, total từ pricing_config, master user_id=NULL, audit actor=profile-id) + UI `/portal/school-onboarding` form+bảng-tính-tiền+card. `has_subject_entitlement` nhận trial. **Lớp 2** mig 038/039 + Edge `invite_master` (Verify JWT OFF): `list_masters_without_login` (UI liệt master chờ mời) + `link_master_user` (secdef+replica gắn user_id qua guard) + Edge createUser auto-confirm+password-tạm + section "Mời chủ trường" trong màn onboarding. **4 lỗi login-thật bắt:** preview-sandbox≠deploy · 409→23503 · D88 · D89 — engine v3–v14 + RLS 8 cụm KHÔNG sửa gì, tenant tạo qua app tự được mọi engine phục vụ. Nghiệm thu login thật: onboard Sao Mai card xanh total 6.5tr → mời master password tạm → tab ẩn danh login → portal "Xin chào Cô Nguyệt Minh master_admin". Sau nghiệm thu **xoá Sao Mai sạch gồm auth.users** → về 3 tenant/3 master. **DB cấu trúc: 46 bảng · 43 hàm definer (+onboard_school +list_masters_without_login +link_master_user) · 125 policy · mig 001→039. Seed 001→012 (KHÔNG đổi).** +1 Edge `invite_master`. SYSTEM_MAP v0.19. **Data state (giữ từ v17):** KHM-DN `sharing_mode=private_share_link`; consent An `private_share_link` (`d1…e1`) WITHDRAWN. Việc treo: 🔴 lưu repo NỢ DỒN mig 026–039+seed 010–012+4 Edge · SPF kép · revoke-share-link UI · Vercel dormant. Kế: **master tự quản trường (tự thêm lớp/GV/trẻ)** · dọn repo · revoke-share-link.* **Cập nhật 2026-06-26 23:54 GMT+7 (v19): ⭐ NGÃ B — TRẢ NỢ REPO + SPF (KHÔNG đổi schema).** Thêm D90 (dump trung thực từ live để backup/phục hồi: `pg_get_functiondef` thân hàm · `proacl`→GRANT dump RIÊNG vì CREATE OR REPLACE reset grant · DDL cột tách · `to_jsonb`+`jsonb_populate_record`+`ON CONFLICT` cho seed idempotent type-faithful · `user_id` ép NULL khi seed). Trả nợ dồn từ v12: 14 hàm 026–039 (`026_039_functions.sql`) + grant+cột mig 030 (`026_039_grants_and_column.sql`; xác nhận `link_master_user`/`write_audit_log`/`create_notification`=service_role only ✓) + 4 Edge `.ts` + seed pilot KHM-DN/MNDM-DN (`seed_010_012_pilots.sql`, đối chiếu KHỚP audit từng bảng: schools 2·profiles 21·classes 4·children 14·enrollments 14·consents 13·moments 5·media 2; `user_id`/`master_profile_id` xử an-toàn-phục-hồi). **SPF kép → gộp 1 record `-all`** (xác nhận Cloudflare live, 14 records). `bunny-sign-test` xác nhận đã xoá (mục library cũ lag). **DB cấu trúc KHÔNG đổi: 46 bảng · 43 hàm definer · 125 policy · mig 001→039 · seed 001→012. SYSTEM_MAP v0.19 (KHÔNG bump — phiên hạ tầng thuần).** Việc treo còn: `revoke_share_link` UI · profile GV/PH chưa login · 2 file curriculum media chưa có nguồn lưu · Vercel dormant · seed_007 repo fix · caption/row test rác. Kế: **master tự quản trường (A)**.* **Cập nhật 2026-06-27 09:43 GMT+7 (v20): ⭐ NGÃ A — MASTER TỰ QUẢN TRƯỜNG (mig 040, 2 RPC + UI Portal Trường).** Thêm D91 (master-self-manage: audit D1 lộ `master_admin`∈`is_school_admin` → phần lớn RLS sẵn, chỉ 2 lỗ → `assign_class_distribution` rót-môn LICENSE-GATED qua `has_subject_entitlement` reuse + chống trùng `distribution_exists`; `provision_parent_and_link` vá D29 RETURNING-câm PH school_id=NULL + max-2-parent; cả 2 KHÔNG guard-INSERT → secdef đủ KHÔNG replica; mirror create_child_and_enroll KHÔNG audit; UI `/portal/school` 3 tab map error.message→toast; ⭐ quyết B GV read-only D45 "2 portal thông nhau"; ⭐ bẫy deploy-lag D84 — toast câm 3 lần vì Pages chưa rebuild, test Preview-Lovable phân biệt). Nghiệm thu login thật trọn 6 phép thử (rót/trùng/đủ-2-PH/license-MNDM-không-Ballet/GV-read-only/isolation) — engine v3–v14 + 8 cụm RLS KHÔNG sửa 1 dòng. **DB cấu trúc: 46 bảng · 45 hàm definer (+`assign_class_distribution` +`provision_parent_and_link`) · 125 policy · mig 001→040 · seed 001→012. SYSTEM_MAP v0.20.** +1 route `/portal/school` + nav 4-vai. Việc treo: 3 món UI cosmetic (toast/tên-PH/dropdown-vai — đã trong bản vá, xác nhận lại sau deploy) · dọn data test KHM (Lớp Test Sáng/Cô Test/Bé Test/Mẹ-Bố Test) · lưu mig 040+`school.tsx` repo · `revoke_share_link` UI · profile GV/PH chưa login · Vercel dormant. Kế: **dọn data test + lưu repo** · revoke-share-link UI · onboard staff/PH qua app (master mời login) · tách 4 portal.* **Cập nhật 2026-06-27 16:20 GMT+7 (v21): ⭐ ĐÓNG NGÃ A + PHÁT SINH (dọn repo/data + D29 chiều đọc + IA polish).** Thêm D92 (D29 có **chiều ĐỌC**: PH `school_id=NULL` → master đọc PH qua embed `profiles!parent_profile_id` trả null → UI "—"; vá = RPC curated secdef `get_child_parents` mig 041 gương D73, KHÔNG nới policy profiles; + bài học **REVOKE/GRANT hàm secdef chạy TÁCH BLOCK** — verify-gọi-hàm raise kéo rollback CREATE (fn_exists=0 đánh lừa); REVOKE trong-cùng-block không phủ default PUBLIC → leaky anon → harden khối riêng; verify hàm-có-gate bằng soi proacl KHÔNG gọi hàm + nghiệm thu login thật). **Việc đóng phiên này:** dọn data test KHM (4 `*_remain`=0, về 3 tenant sạch) · lưu repo `040_master_self_manage.sql` (dump trung thực D90) + `school.tsx` auto-synced · **hợp nhất 3 màn admin** (`sensitive-access`/`curriculum-admin`/`school-onboarding`) từ `portal/` vào `_authenticated/portal.*` (URL giữ nguyên — pathless `_`; guard redirect→`/auth` ăn) · xóa dev panel `portal.rls-test.tsx` (404; audit xác nhận KHÔNG để lại row test rác — 8/8=0) · vá UI PH hiển thị + `link_role` CODE (`mother`/`father`/`guardian` thay nhãn VN). **Cosmetic v20 đóng:** tên PH + email + dropdown vai + toast (`<Toaster>` mount root) hiện đúng sau deploy. **DB cấu trúc: 46 bảng · 46 hàm definer (+`get_child_parents`) · 125 policy · mig 001→041 · seed 001→012. SYSTEM_MAP v0.21.** **3 tenant / 3 master sạch.** Việc treo còn: `revoke_share_link` UI · profile GV/PH chưa login · 2 file curriculum media chưa nguồn lưu · Vercel dormant · seed_007 repo fix. Kế: onboard staff/PH qua app (master mời login) · revoke-share-link UI · tách 4 portal.* **Cập nhật 2026-06-27 19:07 GMT+7 (v22): ⭐ ĐÓNG NGÃ A TRỌN — ONBOARD STAFF/PH QUA APP (master mời login).** Thêm D93 (master tự mời staff/PH đăng nhập: nhân pattern `invite_master` ra Edge `invite_staff`/`invite_parent`; createUser auto-confirm + password tạm dùng-một-lần + chống trùng user_id-không-UNIQUE + link qua RPC secdef+replica D89 + audit actor=profile-id D88; ⭐ **gate same-school KHÁC theo có/không school_id**: GV so `school_id` thẳng, PH `school_id=NULL` đi vòng `child_parents→enrollments→classes.school_id`; UI `InviteResultDialog` dùng chung GV/PH, nút chỉ hiện canManage Quyết B; ⭐ test gate cứng hàm-gọi-từ-Edge = `fetch` thẳng Edge với token localStorage, KHÔNG cần client app). **A1** mig 042: `list_school_invitees` (auth+svc curated) + `link_school_user` (service_role, secdef+replica) + Edge `invite_staff` + nút Mời tab Giáo viên. **A2** mig 043: `link_parent_user` (service_role, secdef+replica) + Edge `invite_parent` (gate đường-vòng PH) + nút Mời `ParentsPanel`. Nghiệm thu login thật: A1 4 phép thử+bonus (mời/login-không-kẹt-D89/read-only-Quyết-B/isolation/get_child_parents-chặn-GV); A2 3 phép thử+**same-school CỨNG `403 different_school` qua fetch JWT thật** (master KHM không mời được PH MNDM dù né UI). Engine v3–v14 + 8 cụm RLS KHÔNG sửa 1 dòng — vòng "trường tự vận hành KHÔNG cần Jean" khép kín (D91 tự-thêm + D93 mời-login). **DB cấu trúc: 46 bảng · 49 hàm definer (+`list_school_invitees` +`link_school_user` +`link_parent_user`) · 125 policy · mig 001→043 · seed 001→012. SYSTEM_MAP v0.22.** +2 Edge `invite_staff`/`invite_parent` (Verify JWT OFF) → 6 Edge. 2 login mới giữ DB (GV Lê Thảo My + PH Trần Quốc Toản). Việc treo: 🔴 lưu repo Edge `invite_staff.ts`/`invite_parent.ts` (nợ mới) · `revoke_share_link` UI · GV/PH còn lại chưa login (4 GV+9 PH) · 2 file curriculum media chưa nguồn lưu · Vercel dormant · seed_007 repo. Kế: revoke-share-link UI · tách 4 portal · dọn nợ repo.*
